--- a/donate_french.html
+++ b/donate_french.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Wokovuway Org.</title>
+    <title>Faire un don - Wokovuway Org.</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Organisation Humanitaire Wokovuway">
+    <meta name="description" content="Organisation Humanitaire Wokovuway.">
     <meta name="keywords" content="Wokovuway, humanitaire, Congo, éducation, charité, réactif">
     <meta name="author" content="Wokovuway">
     <link rel="stylesheet" href="css/donate.css">
@@ -41,15 +41,15 @@
             </div>
         </header>
 
-        <!-- Main Content Section -->
+        <!-- Section Contenu Principal -->
         <main>
-            <!-- Hero Section -->
+            <!-- Section Héros -->
             <section id="donation-hero">
                 <div class="slider">
                     <div class="slide active" style="background-image: url('images/camp_visit.jpg');">
                         <div class="slide-content">
                             <h1>Reconstruire des vies au Congo</h1>
-                            <p>Soutenir les familles déplacées aujourd'hui</p>
+                            <p>Soutenir les familles déplacées aujourd'hui.</p>
                             <a href="https://www.gofundme.com/f/rebuild-lives-in-congo-support-displaced-families-today"
                                 target="_blank" class="btn">Faire un don maintenant</a>
                         </div>
@@ -57,7 +57,7 @@
                     <div class="slide" style="background-image: url('images/IMG_1104.JPG');">
                         <div class="slide-content">
                             <h1>Aide d'urgence</h1>
-                            <p>Fournir nourriture, eau et abri</p>
+                            <p>Fournir nourriture, eau et abri.</p>
                             <a href="https://www.gofundme.com/f/rebuild-lives-in-congo-support-displaced-families-today"
                                 target="_blank" class="btn">Soutenez-nous</a>
                         </div>
@@ -65,7 +65,7 @@
                     <div class="slide" style="background-image: url('images/goma.JPG');">
                         <div class="slide-content">
                             <h1>Espoir pour les enfants</h1>
-                            <p>Aider les orphelins à guérir et à rêver à nouveau</p>
+                            <p>Aider les orphelins à guérir et à rêver à nouveau.</p>
                             <a href="https://www.gofundme.com/f/rebuild-lives-in-congo-support-displaced-families-today"
                                 target="_blank" class="btn">Donner maintenant</a>
                         </div>
@@ -73,7 +73,7 @@
                     <div class="slide" style="background-image: url('images/camp_j.JPG');">
                         <div class="slide-content">
                             <h1>Votre compassion compte</h1>
-                            <p>Apporter de la dignité à ceux dans le besoin</p>
+                            <p>Apporter de la dignité à ceux dans le besoin.</p>
                             <a href="https://www.gofundme.com/f/rebuild-lives-in-congo-support-displaced-families-today"
                                 target="_blank" class="btn">Faire un don aujourd'hui</a>
                         </div>
@@ -82,7 +82,7 @@
                 <div class="slider-dots"></div>
             </section>
 
-            <!-- Donation Options Section -->
+            <!-- Section Options de Don -->
             <section class="donation-section">
                 <div class="container">
                     <h2>Moyens de faire un don</h2>
@@ -90,8 +90,7 @@
                     <div class="donation-row">
                         <div class="donation-item">
                             <h3>Soutenez-nous sur GoFundMe</h3>
-                            <p>Participez à notre campagne pour reconstruire des vies pour les familles déplacées au
-                                Congo.</p>
+                            <p>Participez à notre campagne pour reconstruire des vies pour les familles déplacées au Congo.</p>
                             <a href="https://www.gofundme.com/f/rebuild-lives-in-congo-support-displaced-families-today"
                                 target="_blank" class="btn">Faire un don maintenant</a>
                         </div>
@@ -104,8 +103,7 @@
                                 <li><strong>CITIBANK NEW YORK :</strong> CITI US 3X</li>
                                 <li><strong>COMMERZBANK A.G. :</strong> COBADEFF</li>
                             </ul>
-                            <p>Contactez-nous à <a href="mailto:info@wokovuway.org">info@wokovuway.org</a> pour
-                                assistance.</p>
+                            <p>Contactez-nous à <a href="mailto:info@wokovuway.org">info@wokovuway.org</a> pour assistance.</p>
                         </div>
                         <div class="donation-item">
                             <h3>Autres alternatives</h3>
@@ -116,7 +114,7 @@
                 </div>
             </section>
 
-            <!-- Donation Impact Section -->
+            <!-- Section Impact du Don -->
             <section class="donation-impact">
                 <div class="container">
                     <h2>Comment votre don aide</h2>
@@ -142,7 +140,7 @@
             </section>
         </main>
 
-        <!-- Footer Section -->
+        <!-- Section Pied de page -->
         <footer>
             <div class="container">
                 <div class="footer-row">
@@ -153,9 +151,9 @@
                     </div>
                     <div class="footer-column">
                         <h4>Contact</h4>
-                        <p><strong>Adresse :</strong> Ndosho, Avenue Rulenga, N°003</p>
-                        <p class="italic"><strong>Téléphone :</strong><span class="phone"> +243 123 456 789</span></p>
-                        <p class="italic"><strong>Bureau :</strong> <span class="phone">+243 123 456 789</span></p>
+                        <p><strong>Adresse :</strong> Ndosho, Avenue Rulenga, N°003.</p>
+                        <p class="italic"><strong>Téléphone :</strong> <span class="phone">+243 123 456 789</span>.</p>
+                        <p class="italic"><strong>Bureau :</strong> <span class="phone">+243 123 456 789</span>.</p>
                         <a href="mailto:info@wokovuway.org?subject=Demande&body=Bonjour, j’ai une question à propos de...">
                             <span class="email">info@wokovuway.org</span>
                         </a>
@@ -174,14 +172,13 @@
                         <br>
                         <br>
                         <ul>
-                            <li><a href="terms.html">Terms and Conditions</a></li>
-                            <li><a href="accessibility.html">Accessibility Statement</a></li>
-                            <a href="faq_fr.html" target="_blank">FAQ</a>
+                            <li><a href="terms.html">Termes et conditions</a></li>
+                            <li><a href="accessibility.html">Déclaration d’accessibilité</a></li>
+                            <li><a href="faq_fr.html" target="_blank">FAQ</a></li>
                             <ul>
                                 <li><a href="newsletter_fr.html" target="_blank">Newsletter</a></li>
                             </ul>
-
-                            <li><a href="volunteer.html">Volunteer</a></li>
+                            <li><a href="volunteer.html">Bénévolat</a></li>
                         </ul>
                     </div>
                     <div class="footer-column">
@@ -194,20 +191,16 @@
                     </div>
                     <div class="partners">
                         <h4>Nos partenaires</h4>
-                        <a href="https://menengage.org/" target="_blank"><img src="images/men_en.png"
-                            alt="Partner 1"></a>
-                    <a href="https://cd.usembassy.gov/kinshasa/" target="_blank"><img src="images/uskin.jpg"
-                            alt="Partner 2"></a>
-                    <a href="https://www.medecinssansfrontieres.ca/" target="_blank"><img src="images/med.webp"
-                            alt="Partner 3"></a>
-                    <a href="https://www.unfpa.org/" target="_blank"><img src="images/unfpa.png"
-                            alt="Partner 4"></a>
+                        <a href="https://menengage.org/" target="_blank"><img src="images/men_en.png" alt="Partenaire 1"></a>
+                        <a href="https://cd.usembassy.gov/kinshasa/" target="_blank"><img src="images/uskin.jpg" alt="Partenaire 2"></a>
+                        <a href="https://www.medecinssansfrontieres.ca/" target="_blank"><img src="images/med.webp" alt="Partenaire 3"></a>
+                        <a href="https://www.unfpa.org/" target="_blank"><img src="images/unfpa.png" alt="Partenaire 4"></a>
                     </div>
                 </div>
             </div>
             <div class="footer-bottom">
                 <p>© 2025 Wokovu Way. Tous droits réservés.</p>
-                <p> Conçu et développé par <a href="https://www.goshenwebx.com/" target="_blank">Goshen WebX</a></p>
+                <p>Conçu et développé par <a href="https://www.goshenwebx.com/" target="_blank">Goshen WebX</a>.</p>
             </div>
         </footer>
     </div>
