--- a/faq_fr.html
+++ b/faq_fr.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FAQ - Wokovuway Org.</title>
-    <meta name="description" content="Questions fréquemment posées sur l'Organisation Wokovuway">
+    <meta name="description" content="Questions fréquemment posées sur l'Organisation Wokovuway.">
     <meta name="keywords" content="Wokovuway, FAQ, humanitaire, Congo, charité, questions">
     <meta name="author" content="Wokovuway">
     <link rel="stylesheet" href="css/faq.css">
@@ -46,7 +46,7 @@
             <!-- Introduction -->
             <section class="faq-section">
                 <h2>Bienvenue dans notre FAQ</h2>
-                <p>Vous trouverez ci-dessous les réponses aux questions les plus fréquentes sur l’Organisation à but non lucratif Wokovuway. Si vous ne trouvez pas ce que vous cherchez, n’hésitez pas à <a href="contact.html">nous contacter</a>. Dernière mise à jour : 13 mars 2025.</p>
+                <p>Vous trouverez ci-dessous les réponses aux questions les plus fréquentes sur l’Organisation à but non lucratif Wokovuway. Si vous ne trouvez pas ce que vous cherchez, n’hésitez pas à <a href="contact_french.html">nous contacter</a>. Dernière mise à jour : 13 mars 2025.</p>
             </section>
 
             <!-- Éléments FAQ -->
@@ -70,7 +70,7 @@
                 <h2>Dons</h2>
                 <div class="faq-item">
                     <h3>Comment puis-je faire un don à Wokovuway ?</h3>
-                    <p>Vous pouvez faire un don via notre page <a href="donate.html">Faire un don</a> en utilisant diverses méthodes de paiement, y compris les cartes de crédit et les virements bancaires. Tous les dons sont traités de manière sécurisée.</p>
+                    <p>Vous pouvez faire un don via notre page <a href="donate_french.html">Faire un don</a> en utilisant diverses méthodes de paiement, y compris les cartes de crédit et les virements bancaires. Tous les dons sont traités de manière sécurisée.</p>
                 </div>
                 <div class="faq-item">
                     <h3>Les dons sont-ils déductibles des impôts ?</h3>
@@ -78,7 +78,7 @@
                 </div>
                 <div class="faq-item">
                     <h3>Puis-je demander un remboursement de mon don ?</h3>
-                    <p>Les dons sont généralement non remboursables, comme indiqué dans nos <a href="conditions.html">Conditions d’utilisation</a>. Contactez-nous à <a href="mailto:info@wokovuway.org">info@wokovuway.org</a> pour des cas exceptionnels.</p>
+                    <p>Les dons sont généralement non remboursables, comme indiqué dans nos <a href="conditions.html">conditions d’utilisation</a>. Contactez-nous à <a href="mailto:info@wokovuway.org">info@wokovuway.org</a> pour des cas exceptionnels.</p>
                 </div>
             </section>
 
@@ -86,7 +86,7 @@
                 <h2>S’impliquer</h2>
                 <div class="faq-item">
                     <h3>Puis-je faire du bénévolat avec Wokovuway ?</h3>
-                    <p>Oui ! Nous accueillons les bénévoles. Veuillez visiter notre page <a href="contact.html">Contact</a> pour exprimer votre intérêt et découvrir les opportunités actuelles.</p>
+                    <p>Oui ! Nous accueillons les bénévoles. Veuillez visiter notre page <a href="volunteer_fr.html">Bénévolat</a> pour exprimer votre intérêt et découvrir les opportunités actuelles.</p>
                 </div>
                 <div class="faq-item">
                     <h3>Comment mon organisation peut-elle collaborer avec Wokovuway ?</h3>
@@ -98,11 +98,11 @@
                 <h2>Site web et services</h2>
                 <div class="faq-item">
                     <h3>Votre site web est-il accessible ?</h3>
-                    <p>Nous nous efforçons de respecter les normes WCAG 2.1 niveau AA. Consultez notre <a href="accessibilite.html">Déclaration d’accessibilité</a> pour plus de détails et pour signaler tout problème.</p>
+                    <p>Nous nous efforçons de respecter les normes WCAG 2.1 niveau AA. Consultez notre <a href="accessibility.html">déclaration d’accessibilité</a> pour plus de détails et pour signaler tout problème.</p>
                 </div>
                 <div class="faq-item">
                     <h3>Comment protégez-vous ma vie privée ?</h3>
-                    <p>Nous prenons la confidentialité au sérieux. Consultez notre <a href="privacy.html">Politique de confidentialité</a> pour comprendre comment nous collectons, utilisons et protégeons vos informations.</p>
+                    <p>Nous prenons la confidentialité au sérieux. Consultez notre <a href="privacy_fr.html">politique de confidentialité</a> pour comprendre comment nous collectons, utilisons et protégeons vos informations.</p>
                 </div>
             </section>
 
@@ -110,9 +110,9 @@
             <section class="faq-section">
                 <h2>Encore des questions ?</h2>
                 <p>Si votre question ne trouve pas de réponse ici, veuillez nous contacter :</p>
-                <p><strong>Email :</strong> <a href="mailto:info@wokovuway.org">info@wokovuway.org</a></p>
-                <p><strong>Téléphone :</strong> +243 123 456 789</p>
-                <p><strong>Adresse :</strong> Ndosho, Avenue Rulenga, N°003, Goma, RDC</p>
+                <p><strong>Email :</strong> <a href="mailto:info@wokovuway.org">info@wokovuway.org</a>.</p>
+                <p><strong>Téléphone :</strong> +243 123 456 789.</p>
+                <p><strong>Adresse :</strong> Ndosho, Avenue Rulenga, N°003, Goma, RDC.</p>
             </section>
         </div>
 
@@ -127,9 +127,9 @@
                     </div>
                     <div class="footer-column">
                         <h4>Contact</h4>
-                        <p><strong>Adresse :</strong> Ndosho, Avenue Rulenga, N°003</p>
-                        <p class="italic"><strong>Téléphone :</strong><span class="phone"> +243 123 456 789</span></p>
-                        <p class="italic"><strong>Bureau :</strong> <span class="phone">+243 123 456 789</span></p>
+                        <p><strong>Adresse :</strong> Ndosho, Avenue Rulenga, N°003.</p>
+                        <p class="italic"><strong>Téléphone :</strong> <span class="phone">+243 123 456 789</span>.</p>
+                        <p class="italic"><strong>Bureau :</strong> <span class="phone">+243 123 456 789</span>.</p>
                         <a href="mailto:info@wokovuway.org?subject=Demande&body=Bonjour, j’ai une question à propos de...">
                             <span class="email">info@wokovuway.org</span>
                         </a>
@@ -148,14 +148,13 @@
                         <br>
                         <br>
                         <ul>
-                            <li><a href="terms.html">Terms and Conditions</a></li>
-                            <li><a href="accessibility.html">Accessibility Statement</a></li>
-                            <a href="faq_fr.html" target="_blank">FAQ</a>
+                            <li><a href="terms.html">Termes et conditions</a></li>
+                            <li><a href="accessibility.html">Déclaration d’accessibilité</a></li>
+                            <li><a href="faq_fr.html" target="_blank">FAQ</a></li>
                             <ul>
                                 <li><a href="newsletter_fr.html" target="_blank">Newsletter</a></li>
                             </ul>
-
-                            <li><a href="volunteer.html">Volunteer</a></li>
+                            <li><a href="volunteer.html">Bénévolat</a></li>
                         </ul>
                     </div>
                     <div class="footer-column">
@@ -168,20 +167,16 @@
                     </div>
                     <div class="partners">
                         <h4>Nos partenaires</h4>
-                        <a href="https://menengage.org/" target="_blank"><img src="images/men_en.png"
-                            alt="Partner 1"></a>
-                    <a href="https://cd.usembassy.gov/kinshasa/" target="_blank"><img src="images/uskin.jpg"
-                            alt="Partner 2"></a>
-                    <a href="https://www.medecinssansfrontieres.ca/" target="_blank"><img src="images/med.webp"
-                            alt="Partner 3"></a>
-                    <a href="https://www.unfpa.org/" target="_blank"><img src="images/unfpa.png"
-                            alt="Partner 4"></a>
+                        <a href="https://menengage.org/" target="_blank"><img src="images/men_en.png" alt="Partenaire 1"></a>
+                        <a href="https://cd.usembassy.gov/kinshasa/" target="_blank"><img src="images/uskin.jpg" alt="Partenaire 2"></a>
+                        <a href="https://www.medecinssansfrontieres.ca/" target="_blank"><img src="images/med.webp" alt="Partenaire 3"></a>
+                        <a href="https://www.unfpa.org/" target="_blank"><img src="images/unfpa.png" alt="Partenaire 4"></a>
                     </div>
                 </div>
             </div>
             <div class="footer-bottom">
                 <p>© 2025 Wokovu Way. Tous droits réservés.</p>
-                <p> Conçu et développé par <a href="https://www.goshenwebx.com/" target="_blank">Goshen WebX</a></p>
+                <p>Conçu et développé par <a href="https://www.goshenwebx.com/" target="_blank">Goshen WebX</a>.</p>
             </div>
         </footer>
     </div>
