--- a/team.html
+++ b/team.html
@@ -50,7 +50,7 @@
                     <img src="images/director.jpeg" alt="Director Bagula" class="team-img">
                     <div class="team-description">
                         <h3>
-                            Director Bagula
+                            Darelle Bagula
                             <a href="https://www.linkedin.com/in/johnsmith" target="_blank" style="margin-left: 10px;">
                                 <i class="fab fa-linkedin" style="font-size: 1.2rem; color: #0077b5;"></i>
                             </a>
@@ -99,7 +99,7 @@
                             </a>
                         </h3>
                         <p class="role">IT Specialist</p>
-                        <p>Moise ensures system security and enhances platform development.</p>
+                        <p>Moise boosts system security, platform development, and online presence with expert web solutions.</p>
                     </div>
                 </div>
             </div>
