--- a/terms_french.html
+++ b/terms_french.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Conditions d'utilisation - Wokovuway Org.</title>
-    <meta name="description" content="Conditions d'utilisation de l'Organisation Wokovuway">
+    <meta name="description" content="Conditions d'utilisation de l'Organisation Wokovuway.">
     <meta name="keywords" content="Wokovuway, conditions d'utilisation, humanitaire, Congo, charité">
     <meta name="author" content="Wokovuway">
     <link rel="stylesheet" href="css/terms.css">
@@ -31,7 +31,6 @@
                         <li><a href="success_french.html">Histoires de succès</a></li>
                         <li><a href="donate_french.html">Faire un don</a></li>
                         <li><a href="contact_french.html">Contact</a></li>
-
                         <li class="lang-toggle">
                             <a href="terms.html" title="Passer à l'anglais">
                                 <i class="fas fa-globe"></i> EN
@@ -48,70 +47,50 @@
             <!-- Introduction -->
             <section class="terms-section">
                 <h2>Introduction</h2>
-                <p>Bienvenue sur le site de l'Organisation à but non lucratif Wokovuway. Ces Conditions d'utilisation
-                    ("Conditions") régissent votre accès et votre utilisation de notre site web, de nos services et de
-                    tout contenu connexe (collectivement, "Services"). En accédant ou en utilisant nos Services, vous
-                    acceptez d'être lié par ces Conditions. Si vous n'acceptez pas, veuillez vous abstenir d'utiliser
-                    nos Services. Ces Conditions ont été mises à jour pour la dernière fois le 13 mars 2025.</p>
+                <p>Bienvenue sur le site de l'Organisation à but non lucratif Wokovuway. Ces conditions d'utilisation ("Conditions") régissent votre accès et votre utilisation de notre site web, de nos services et de tout contenu connexe (collectivement, "Services"). En accédant ou en utilisant nos Services, vous acceptez d'être lié par ces Conditions. Si vous n'acceptez pas, veuillez vous abstenir d'utiliser nos Services. Ces Conditions ont été mises à jour pour la dernière fois le 13 mars 2025.</p>
             </section>
 
             <!-- Utilisation des Services -->
             <section class="terms-section">
                 <h2>Utilisation des Services</h2>
-                <p>Vous acceptez d'utiliser nos Services uniquement à des fins légales et conformément à ces Conditions.
-                    Vous ne devez pas :</p>
+                <p>Vous acceptez d'utiliser nos Services uniquement à des fins légales et conformément à ces Conditions. Vous ne devez pas :</p>
                 <ul>
-                    <li>Utiliser les Services pour participer à des activités illégales ou promouvoir des comportements
-                        nuisibles.</li>
-                    <li>Modifier, reproduire ou distribuer tout contenu de nos Services sans autorisation écrite
-                        préalable.</li>
-                    <li>Interférer ou perturber le fonctionnement des Services, y compris par piratage ou introduction
-                        de code malveillant.</li>
-                    <li>Usurper l’identité d’une personne ou d’une entité ou faussement prétendre être affilié à
-                        Wokovuway.</li>
+                    <li>Utiliser les Services pour participer à des activités illégales ou promouvoir des comportements nuisibles.</li>
+                    <li>Modifier, reproduire ou distribuer tout contenu de nos Services sans autorisation écrite préalable.</li>
+                    <li>Interférer ou perturber le fonctionnement des Services, y compris par piratage ou introduction de code malveillant.</li>
+                    <li>Usurper l’identité d’une personne ou d’une entité ou faussement prétendre être affilié à Wokovuway.</li>
                 </ul>
             </section>
 
             <!-- Propriété Intellectuelle -->
             <section class="terms-section">
-                <h2>Propriété Intellectuelle</h2>
-                <p>Tout le contenu de nos Services, y compris les textes, images, logos et designs, appartient à
-                    Wokovuway ou à ses concédants de licence et est protégé par les lois sur le droit d’auteur, les
-                    marques déposées et autres lois sur la propriété intellectuelle. Vous ne pouvez pas utiliser notre
-                    contenu à des fins commerciales sans autorisation explicite. Une utilisation personnelle et non
-                    commerciale est autorisée à condition de conserver tous les avis de droit d’auteur.</p>
+                <h2>Propriété intellectuelle</h2>
+                <p>Tout le contenu de nos Services, y compris les textes, images, logos et designs, appartient à Wokovuway ou à ses concédants de licence et est protégé par les lois sur le droit d’auteur, les marques déposées et autres lois sur la propriété intellectuelle. Vous ne pouvez pas utiliser notre contenu à des fins commerciales sans autorisation explicite. Une utilisation personnelle et non commerciale est autorisée à condition de conserver tous les avis de droit d’auteur.</p>
             </section>
 
             <!-- Dons -->
             <section class="terms-section">
                 <h2>Dons</h2>
-                <p>Les dons effectués via nos Services sont volontaires et non remboursables sauf indication contraire.
-                    En faisant un don, vous acceptez que :</p>
+                <p>Les dons effectués via nos Services sont volontaires et non remboursables, sauf indication contraire. En faisant un don, vous acceptez que :</p>
                 <ul>
                     <li>Vos informations de paiement soient exactes et que vous soyez autorisé à les utiliser.</li>
-                    <li>Les fonds soient utilisés pour soutenir les initiatives humanitaires de Wokovuway à notre
-                        discrétion.</li>
+                    <li>Les fonds soient utilisés pour soutenir les initiatives humanitaires de Wokovuway à notre discrétion.</li>
                     <li>Nous puissions reconnaître publiquement votre don, sauf si vous demandez l’anonymat.</li>
                 </ul>
             </section>
 
             <!-- Contenu des Utilisateurs -->
             <section class="terms-section">
-                <h2>Contenu des Utilisateurs</h2>
-                <p>Si vous soumettez du contenu (par exemple, commentaires, témoignages ou photos) à nos Services, vous
-                    accordez à Wokovuway une licence non exclusive, gratuite et mondiale pour utiliser, reproduire et
-                    afficher ce contenu à des fins promotionnelles ou opérationnelles. Vous garantissez que votre
-                    contenu n’enfreint pas les droits de tiers ni les lois applicables.</p>
+                <h2>Contenu des utilisateurs</h2>
+                <p>Si vous soumettez du contenu (par exemple, commentaires, témoignages ou photos) à nos Services, vous accordez à Wokovuway une licence non exclusive, gratuite et mondiale pour utiliser, reproduire et afficher ce contenu à des fins promotionnelles ou opérationnelles. Vous garantissez que votre contenu n’enfreint pas les droits de tiers ni les lois applicables.</p>
             </section>
 
             <!-- Limitation de Responsabilité -->
             <section class="terms-section">
-                <h2>Limitation de Responsabilité</h2>
-                <p>Wokovuway fournit les Services "tels quels" sans aucune garantie. Dans la mesure maximale permise par
-                    la loi, nous ne sommes pas responsables :</p>
+                <h2>Limitation de responsabilité</h2>
+                <p>Wokovuway fournit les Services "tels quels" sans aucune garantie. Dans la mesure maximale permise par la loi, nous ne sommes pas responsables :</p>
                 <ul>
-                    <li>Des dommages indirects, accessoires ou consécutifs découlant de votre utilisation des Services.
-                    </li>
+                    <li>Des dommages indirects, accessoires ou consécutifs découlant de votre utilisation des Services.</li>
                     <li>Des interruptions, erreurs ou inexactitudes dans les Services.</li>
                     <li>De la perte de données ou d’un accès non autorisé hors de notre contrôle raisonnable.</li>
                 </ul>
@@ -120,34 +99,28 @@
             <!-- Résiliation -->
             <section class="terms-section">
                 <h2>Résiliation</h2>
-                <p>Nous nous réservons le droit de suspendre ou de résilier votre accès aux Services à notre discrétion,
-                    notamment en cas de violation de ces Conditions. En cas de résiliation, votre droit d’utiliser les
-                    Services cessera immédiatement.</p>
+                <p>Nous nous réservons le droit de suspendre ou de résilier votre accès aux Services à notre discrétion, notamment en cas de violation de ces Conditions. En cas de résiliation, votre droit d’utiliser les Services cessera immédiatement.</p>
             </section>
 
             <!-- Loi Applicable -->
             <section class="terms-section">
-                <h2>Loi Applicable</h2>
-                <p>Ces Conditions sont régies par les lois de la République Démocratique du Congo (RDC). Tout litige
-                    découlant de ces Conditions sera résolu devant les tribunaux de Goma, RDC, sauf disposition
-                    contraire de la loi.</p>
+                <h2>Loi applicable</h2>
+                <p>Ces Conditions sont régies par les lois de la République Démocratique du Congo (RDC). Tout litige découlant de ces Conditions sera résolu devant les tribunaux de Goma, RDC, sauf disposition contraire de la loi.</p>
             </section>
 
             <!-- Modifications des Conditions -->
             <section class="terms-section">
-                <h2>Modifications de ces Conditions</h2>
-                <p>Nous pouvons mettre à jour ces Conditions périodiquement. Les modifications seront publiées sur cette
-                    page avec la date de mise à jour. Votre utilisation continue des Services après les modifications
-                    constitue une acceptation des Conditions révisées.</p>
+                <h2>Modifications de ces conditions</h2>
+                <p>Nous pouvons mettre à jour ces Conditions périodiquement. Les modifications seront publiées sur cette page avec la date de mise à jour. Votre utilisation continue des Services après les modifications constitue une acceptation des Conditions révisées.</p>
             </section>
 
             <!-- Contactez-nous -->
             <section class="terms-section">
                 <h2>Contactez-nous</h2>
                 <p>Pour toute question concernant ces Conditions, veuillez nous contacter à :</p>
-                <p><strong>Email :</strong> <a href="mailto:info@wokovuway.org">info@wokovuway.org</a></p>
-                <p><strong>Adresse :</strong> Ndosho, Avenue Rulenga, N°003, Goma, RDC</p>
-                <p><strong>Téléphone :</strong> +243 123 456 789</p>
+                <p><strong>Email :</strong> <a href="mailto:info@wokovuway.org">info@wokovuway.org</a>.</p>
+                <p><strong>Adresse :</strong> Ndosho, Avenue Rulenga, N°003, Goma, RDC.</p>
+                <p><strong>Téléphone :</strong> +243 123 456 789.</p>
             </section>
         </div>
 
@@ -162,9 +135,9 @@
                     </div>
                     <div class="footer-column">
                         <h4>Contact</h4>
-                        <p><strong>Adresse :</strong> Ndosho, Avenue Rulenga, N°003</p>
-                        <p class="italic"><strong>Téléphone :</strong><span class="phone"> +243 123 456 789</span></p>
-                        <p class="italic"><strong>Bureau :</strong> <span class="phone">+243 123 456 789</span></p>
+                        <p><strong>Adresse :</strong> Ndosho, Avenue Rulenga, N°003.</p>
+                        <p class="italic"><strong>Téléphone :</strong> <span class="phone">+243 123 456 789</span>.</p>
+                        <p class="italic"><strong>Bureau :</strong> <span class="phone">+243 123 456 789</span>.</p>
                         <a href="mailto:info@wokovuway.org?subject=Demande&body=Bonjour, j’ai une question à propos de...">
                             <span class="email">info@wokovuway.org</span>
                         </a>
@@ -183,14 +156,13 @@
                         <br>
                         <br>
                         <ul>
-                            <li><a href="terms.html">Terms and Conditions</a></li>
-                            <li><a href="accessibility.html">Accessibility Statement</a></li>
-                            <a href="faq_fr.html" target="_blank">FAQ</a>
+                            <li><a href="terms.html">Termes et conditions</a></li>
+                            <li><a href="accessibility.html">Déclaration d’accessibilité</a></li>
+                            <li><a href="faq_fr.html" target="_blank">FAQ</a></li>
                             <ul>
                                 <li><a href="newsletter_fr.html" target="_blank">Newsletter</a></li>
                             </ul>
-
-                            <li><a href="volunteer.html">Volunteer</a></li>
+                            <li><a href="volunteer.html">Bénévolat</a></li>
                         </ul>
                     </div>
                     <div class="footer-column">
@@ -202,20 +174,17 @@
                         </div>
                     </div>
                     <div class="partners">
-                        <a href="https://menengage.org/" target="_blank"><img src="images/men_en.png"
-                            alt="Partner 1"></a>
-                    <a href="https://cd.usembassy.gov/kinshasa/" target="_blank"><img src="images/uskin.jpg"
-                            alt="Partner 2"></a>
-                    <a href="https://www.medecinssansfrontieres.ca/" target="_blank"><img src="images/med.webp"
-                            alt="Partner 3"></a>
-                    <a href="https://www.unfpa.org/" target="_blank"><img src="images/unfpa.png"
-                            alt="Partner 4"></a>
+                        <h4>Nos partenaires</h4>
+                        <a href="https://menengage.org/" target="_blank"><img src="images/men_en.png" alt="Partenaire 1"></a>
+                        <a href="https://cd.usembassy.gov/kinshasa/" target="_blank"><img src="images/uskin.jpg" alt="Partenaire 2"></a>
+                        <a href="https://www.medecinssansfrontieres.ca/" target="_blank"><img src="images/med.webp" alt="Partenaire 3"></a>
+                        <a href="https://www.unfpa.org/" target="_blank"><img src="images/unfpa.png" alt="Partenaire 4"></a>
                     </div>
                 </div>
             </div>
             <div class="footer-bottom">
                 <p>© 2025 Wokovu Way. Tous droits réservés.</p>
-                <p> Conçu et développé par <a href="https://www.goshenwebx.com/" target="_blank">Goshen WebX</a></p>
+                <p>Conçu et développé par <a href="https://www.goshenwebx.com/" target="_blank">Goshen WebX</a>.</p>
             </div>
         </footer>
     </div>
