--- a/about_french.html
+++ b/about_french.html
@@ -6,8 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>À propos de nous - Wokovuway Org.</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description"
-        content="Soutenir l'Organisation Humanitaire Wokovuway dans la reconstruction des vies au Congo">
+    <meta name="description" content="Soutenir l'Organisation Humanitaire Wokovuway dans la reconstruction des vies au Congo.">
     <meta name="keywords" content="Wokovuway, humanitaire, Congo, à propos, charité, familles déplacées">
     <meta name="author" content="Wokovuway">
     <link rel="stylesheet" href="css/about.css">
@@ -45,69 +44,48 @@
         <section id="about-us" class="container">
             <div class="row text-center">
                 <h2>À propos de Wokovuway</h2>
-                <p class="lead">Apporter de l'espoir, restaurer la dignité, changer des vies</p>
+                <p class="lead">Apporter de l'espoir, restaurer la dignité, changer des vies.</p>
             </div>
             <div class="row">
                 <div class="col-md-6">
                     <img src="images/story1.JPG" alt="Mains secourables" class="img-responsive">
                 </div>
                 <div class="col-md-6">
-                    <p>Wokovuway est plus qu'une organisation—c'est un mouvement engagé à élever les plus vulnérables
-                        dans nos communautés. Fondé avec la passion d'aborder les luttes des personnes affectées par les
-                        conflits et la pauvreté, nous opérons dans des régions comme les rues déchirées par la guerre de
-                        Goma, RDC, et au-delà, en veillant à ce que personne ne soit laissé pour compte.</p>
+                    <p>Wokovuway est plus qu'une organisation — c'est un mouvement engagé à élever les plus vulnérables dans nos communautés. Fondé avec la passion d'aborder les luttes des personnes affectées par les conflits et la pauvreté, nous opérons dans des régions comme les rues déchirées par la guerre de Goma, RDC, et au-delà, en veillant à ce que personne ne soit laissé pour compte.</p>
                     <p>Grâce à des initiatives ciblées, nous fournissons un soutien impactant, notamment :</p>
                     <ul>
-                        <li><strong>Soutien à la santé :</strong> Accès à l'aide médicale, au conseil en santé mentale
-                            et aux soins d'urgence pour ceux en crise.</li>
-                        <li><strong>Sécurité alimentaire :</strong> Repas nutritifs et ressources pour combattre la faim
-                            pour les familles dans le besoin.</li>
-                        <li><strong>Abris :</strong> Logements temporaires sûrs pour les individus déplacés par la
-                            guerre ou les catastrophes.</li>
-                        <li><strong>Éducation :</strong> Opportunités d'apprentissage pour les enfants touchés par les
-                            conflits, ouvrant la voie à un avenir meilleur.</li>
+                        <li><strong>Soutien à la santé :</strong> Accès à l'aide médicale, au conseil en santé mentale et aux soins d'urgence pour ceux en crise.</li>
+                        <li><strong>Sécurité alimentaire :</strong> Repas nutritifs et ressources pour combattre la faim pour les familles dans le besoin.</li>
+                        <li><strong>Abris :</strong> Logements temporaires sûrs pour les individus déplacés par la guerre ou les catastrophes.</li>
+                        <li><strong>Éducation :</strong> Opportunités d'apprentissage pour les enfants touchés par les conflits, ouvrant la voie à un avenir meilleur.</li>
                     </ul>
-                    <p>Chaque vie que nous touchons représente un pas vers un monde plus équitable. Avec le soutien de
-                        nos partenaires et donateurs, nous reconstruisons l'espoir—une personne, une famille, une
-                        communauté à la fois.</p>
+                    <p>Chaque vie que nous touchons représente un pas vers un monde plus équitable. Avec le soutien de nos partenaires et donateurs, nous reconstruisons l'espoir — une personne, une famille, une communauté à la fois.</p>
                 </div>
             </div>
         </section>
 
         <section class="mission-vision container">
             <h1>Notre mission</h1>
-            <p>Nous exploitons la puissance de la communauté, de la compassion et de la résilience pour transformer des
-                vies et briser les cycles de conflit, de pauvreté et de déplacement.</p>
-            <p>Notre mission est d'autonomiser les populations vulnérables—particulièrement les femmes et les enfants—en
-                fournissant un accès à une éducation de qualité, à des soins de santé complets et à des solutions
-                durables qui favorisent le développement à long terme et l'autonomie.</p>
+            <p>Nous exploitons la puissance de la communauté, de la compassion et de la résilience pour transformer des vies et briser les cycles de conflit, de pauvreté et de déplacement.</p>
+            <p>Notre mission est d'autonomiser les populations vulnérables — particulièrement les femmes et les enfants — en fournissant un accès à une éducation de qualité, à des soins de santé complets et à des solutions durables qui favorisent le développement à long terme et l'autonomie.</p>
 
             <h2>Notre vision</h2>
-            <p>Nous aspirons à créer un monde où chaque individu peut vivre avec dignité et autosuffisance, libéré des
-                fardeaux de la pauvreté et de l'injustice.</p>
-            <p>Nous envisageons des communautés florissantes et résilientes construites sur les fondations de
-                l'éducation, de l'autonomisation économique et de la croissance durable, où chaque personne a la chance
-                de réaliser pleinement son potentiel.</p>
+            <p>Nous aspirons à créer un monde où chaque individu peut vivre avec dignité et autosuffisance, libéré des fardeaux de la pauvreté et de l'injustice.</p>
+            <p>Nous envisageons des communautés florissantes et résilientes construites sur les fondations de l'éducation, de l'autonomisation économique et de la croissance durable, où chaque personne a la chance de réaliser pleinement son potentiel.</p>
 
             <h2>Nos valeurs</h2>
             <ul class="values-list">
-                <li><strong>Compassion :</strong> Agir avec empathie, gentillesse et respect envers tous ceux que nous
-                    servons.</li>
-                <li><strong>Communauté :</strong> Construire l'unité et favoriser la collaboration entre les individus
-                    et les partenaires.</li>
-                <li><strong>Résilience :</strong> Inspirer la persévérance et équiper les gens d'outils pour
-                    l'autosuffisance.</li>
-                <li><strong>Éducation :</strong> Ouvrir des opportunités grâce à la connaissance pour les générations
-                    futures.</li>
-                <li><strong>Durabilité :</strong> Mettre en œuvre des solutions conçues pour un changement positif
-                    durable.</li>
-                <li><strong>Intégrité :</strong> Maintenir la transparence, l'honnêteté et la responsabilité dans tout
-                    ce que nous faisons.</li>
+                <li><strong>Compassion :</strong> Agir avec empathie, gentillesse et respect envers tous ceux que nous servons.</li>
+                <li><strong>Communauté :</strong> Construire l'unité et favoriser la collaboration entre les individus et les partenaires.</li>
+                <li><strong>Résilience :</strong> Inspirer la persévérance et équiper les gens d'outils pour l'autosuffisance.</li>
+                <li><strong>Éducation :</strong> Ouvrir des opportunités grâce à la connaissance pour les générations futures.</li>
+                <li><strong>Durabilité :</strong> Mettre en œuvre des solutions conçues pour un changement positif durable.</li>
+                <li><strong>Intégrité :</strong> Maintenir la transparence, l'honnêteté et la responsabilité dans tout ce que nous faisons.</li>
             </ul>
         </section>
 
-         <!-- Footer Section -->
-         <footer>
+        <!-- Section Pied de page -->
+        <footer>
             <div class="container">
                 <div class="footer-row">
                     <div class="footer-column">
@@ -117,9 +95,9 @@
                     </div>
                     <div class="footer-column">
                         <h4>Contact</h4>
-                        <p><strong>Adresse :</strong> Ndosho, Avenue Rulenga, N°003</p>
-                        <p class="italic"><strong>Téléphone :</strong><span class="phone"> +243 123 456 789</span></p>
-                        <p class="italic"><strong>Bureau :</strong> <span class="phone">+243 123 456 789</span></p>
+                        <p><strong>Adresse :</strong> Ndosho, Avenue Rulenga, N°003.</p>
+                        <p class="italic"><strong>Téléphone :</strong> <span class="phone">+243 123 456 789</span>.</p>
+                        <p class="italic"><strong>Bureau :</strong> <span class="phone">+243 123 456 789</span>.</p>
                         <a href="mailto:info@wokovuway.org?subject=Demande&body=Bonjour, j’ai une question à propos de...">
                             <span class="email">info@wokovuway.org</span>
                         </a>
@@ -138,14 +116,13 @@
                         <br>
                         <br>
                         <ul>
-                            <li><a href="terms.html">Terms and Conditions</a></li>
-                            <li><a href="accessibility.html">Accessibility Statement</a></li>
-                            <a href="faq_fr.html" target="_blank">FAQ</a>
+                            <li><a href="terms.html">Termes et conditions</a></li>
+                            <li><a href="accessibility.html">Déclaration d’accessibilité</a></li>
+                            <li><a href="faq_fr.html" target="_blank">FAQ</a></li>
                             <ul>
                                 <li><a href="newsletter_fr.html" target="_blank">Newsletter</a></li>
                             </ul>
-
-                            <li><a href="volunteer.html">Volunteer</a></li>
+                            <li><a href="volunteer.html">Bénévolat</a></li>
                         </ul>
                     </div>
                     <div class="footer-column">
@@ -158,20 +135,16 @@
                     </div>
                     <div class="partners">
                         <h4>Nos partenaires</h4>
-                        <a href="https://menengage.org/" target="_blank"><img src="images/men_en.png"
-                            alt="Partner 1"></a>
-                    <a href="https://cd.usembassy.gov/kinshasa/" target="_blank"><img src="images/uskin.jpg"
-                            alt="Partner 2"></a>
-                    <a href="https://www.medecinssansfrontieres.ca/" target="_blank"><img src="images/med.webp"
-                            alt="Partner 3"></a>
-                    <a href="https://www.unfpa.org/" target="_blank"><img src="images/unfpa.png"
-                            alt="Partner 4"></a>
+                        <a href="https://menengage.org/" target="_blank"><img src="images/men_en.png" alt="Partenaire 1"></a>
+                        <a href="https://cd.usembassy.gov/kinshasa/" target="_blank"><img src="images/uskin.jpg" alt="Partenaire 2"></a>
+                        <a href="https://www.medecinssansfrontieres.ca/" target="_blank"><img src="images/med.webp" alt="Partenaire 3"></a>
+                        <a href="https://www.unfpa.org/" target="_blank"><img src="images/unfpa.png" alt="Partenaire 4"></a>
                     </div>
                 </div>
             </div>
             <div class="footer-bottom">
                 <p>© 2025 Wokovu Way. Tous droits réservés.</p>
-                <p> Conçu et développé par <a href="https://www.goshenwebx.com/" target="_blank">Goshen WebX</a></p>
+                <p>Conçu et développé par <a href="https://www.goshenwebx.com/" target="_blank">Goshen WebX</a>.</p>
             </div>
         </footer>
     </div>
@@ -179,4 +152,4 @@
     <script src="js/about.js"></script>
 </body>
 
-</html>6 
+</html>
