--- a/accessibility_french.html
+++ b/accessibility_french.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Déclaration d'accessibilité - Wokovuway Org.</title>
-    <meta name="description" content="Déclaration d'accessibilité de l'Organisation Wokovuway">
-    <meta name="keywords" content="Wokovuway, accessibilité, inclusion, humanitaire, Congo, charité">
+    <title>Contact - Wokovuway Org.</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Organisation Humanitaire Wokovuway.">
+    <meta name="keywords" content="Wokovuway, humanitaire, Congo, éducation, charité, réactif">
     <meta name="author" content="Wokovuway">
-    <link rel="stylesheet" href="css/accessibiity.css">
+    <link rel="stylesheet" href="css/contact.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
@@ -30,7 +30,7 @@
                         <li><a href="donate_french.html">Faire un don</a></li>
                         <li><a href="contact_french.html">Contact</a></li>
                         <li class="lang-toggle">
-                            <a href="accessibility.html" title="Passer à l'anglais">
+                            <a href="contact.html" title="Passer à l'anglais">
                                 <i class="fas fa-globe"></i> EN
                             </a>
                         </li>
@@ -38,71 +38,42 @@
                 </nav>
             </div>
         </header>
+        <!-- Section Contact -->
+        <section class="contact-section container">
+            <h1 class="text-center">Prenez contact</h1>
+            <p class="text-center lead">Nous serions ravis d'avoir de vos nouvelles ! Remplissez le formulaire ci-dessous, et nous vous répondrons dès que possible.</p>
+            <div class="row">
+                <div class="col-md-6">
+                    <form action="#" method="POST" class="contact-form">
+                        <div class="form-group">
+                            <label for="name">Nom complet</label>
+                            <input type="text" id="name" name="name" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="email">Adresse email</label>
+                            <input type="email" id="email" name="email" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="subject">Sujet</label>
+                            <input type="text" id="subject" name="subject" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="message">Votre message</label>
+                            <textarea id="message" name="message" rows="5" required></textarea>
+                        </div>
+                        <button type="submit" class="btn-submit">Envoyer le message</button>
+                    </form>
+                </div>
+                <div class="col-md-6 contact-info">
+                    <h3>Informations de contact</h3>
+                    <p><i class="fas fa-envelope"></i> Email : <a href="mailto:info@wokovuway.org">info@wokovuway.org</a></p>
+                    <p><i class="fas fa-phone"></i> Téléphone : +243 123 456 789</p>
+                    <p><i class="fas fa-map-marker-alt"></i> Adresse : Ndosho, Avenue Rulenga, N°003, Goma, RDC</p>
+                </div>
+            </div>
+        </section>
 
-        <div class="container">
-            <!-- Titre de la page -->
-            <h1 class="page-title">Déclaration d'accessibilité</h1>
-            
-            <!-- Engagement envers l'accessibilité -->
-            <section class="accessibility-section">
-                <h2>Notre engagement</h2>
-                <p>L’Organisation à but non lucratif Wokovuway s’engage à garantir que notre site web et nos services soient accessibles à tous, y compris aux personnes handicapées. Nous nous efforçons de fournir une expérience inclusive qui reflète notre mission d’autonomiser et de soutenir les communautés. Cette Déclaration d’accessibilité détaille nos efforts et notre engagement continu envers l’accessibilité. Dernière mise à jour : 13 mars 2025.</p>
-            </section>
-
-            <!-- Normes et lignes directrices -->
-            <section class="accessibility-section">
-                <h2>Normes et lignes directrices</h2>
-                <p>Nous visons à respecter les <a href="https://www.w3.org/WAI/standards-guidelines/wcag/" target="_blank">Directives pour l’accessibilité des contenus web (WCAG) 2.1</a> au niveau AA. Ces lignes directrices garantissent que notre contenu numérique est :</p>
-                <ul>
-                    <li><strong>Perceptible :</strong> Les informations sont présentées de manière à ce que les utilisateurs puissent les percevoir (par exemple, des alternatives textuelles pour les images).</li>
-                    <li><strong>Utilisable :</strong> La navigation et les fonctionnalités sont accessibles via un clavier et d’autres technologies d’assistance.</li>
-                    <li><strong>Compréhensible :</strong> Le contenu est clair et prévisible pour améliorer l’ergonomie.</li>
-                    <li><strong>Robuste :</strong> Notre site est compatible avec une variété d’outils et d’appareils d’assistance.</li>
-                </ul>
-            </section>
-
-            <!-- Fonctionnalités d'accessibilité -->
-            <section class="accessibility-section">
-                <h2>Fonctionnalités d'accessibilité</h2>
-                <p>Nous avons mis en place les fonctionnalités suivantes pour améliorer l’accessibilité :</p>
-                <ul>
-                    <li>Texte alternatif pour toutes les images afin de soutenir les lecteurs d’écran.</li>
-                    <li>Support de la navigation au clavier pour les utilisateurs incapables d’utiliser une souris.</li>
-                    <li>Schémas de couleurs à fort contraste et tailles de police lisibles pour une clarté visuelle.</li>
-                    <li>Navigation cohérente et prévisible sur toutes les pages.</li>
-                </ul>
-            </section>
-
-            <!-- Efforts continus -->
-            <section class="accessibility-section">
-                <h2>Efforts continus</h2>
-                <p>Nous travaillons constamment à améliorer l’accessibilité en :</p>
-                <ul>
-                    <li>Réalisant des audits réguliers à l’aide d’outils automatisés et de tests manuels.</li>
-                    <li>Formant notre personnel et nos développeurs aux meilleures pratiques d’accessibilité.</li>
-                    <li>Intégrant les retours des utilisateurs pour surmonter les obstacles.</li>
-                </ul>
-                <p>Bien que nous visons une conformité totale, certaines zones peuvent encore être en cours d’amélioration à mesure que nous affinons notre présence numérique.</p>
-            </section>
-
-            <!-- Retours et assistance -->
-            <section class="accessibility-section">
-                <h2>Retours et assistance</h2>
-                <p>Si vous rencontrez des problèmes d’accessibilité ou avez besoin d’assistance, veuillez nous en informer. Nous accueillons vos commentaires pour nous aider à nous améliorer. Contactez-nous à :</p>
-                <p><strong>Email :</strong> <a href="mailto:accessibility@wokovuway.org">accessibility@wokovuway.org</a></p>
-                <p><strong>Téléphone :</strong> +243 123 456 789 (veuillez préciser les préoccupations d’accessibilité)</p>
-                <p><strong>Adresse :</strong> Ndosho, Avenue Rulenga, N°003, Goma, RDC</p>
-                <p>Nous visons à répondre aux demandes liées à l’accessibilité dans un délai de 5 jours ouvrables.</p>
-            </section>
-
-            <!-- Contenu tiers -->
-            <section class="accessibility-section">
-                <h2>Contenu tiers</h2>
-                <p>Certaines contenus ou services liés à notre site (par exemple, plateformes de médias sociaux, sites de partenaires) peuvent être gérés par des tiers. Nous ne contrôlons pas leurs fonctionnalités d’accessibilité, mais encourageons les utilisateurs à signaler les problèmes afin que nous puissions collaborer avec ces fournisseurs lorsque possible.</p>
-            </section>
-        </div>
-
-        <!-- Pied de page -->
+        <!-- Section Pied de page -->
         <footer>
             <div class="container">
                 <div class="footer-row">
@@ -113,9 +84,9 @@
                     </div>
                     <div class="footer-column">
                         <h4>Contact</h4>
-                        <p><strong>Adresse :</strong> Ndosho, Avenue Rulenga, N°003</p>
-                        <p class="italic"><strong>Téléphone :</strong><span class="phone"> +243 123 456 789</span></p>
-                        <p class="italic"><strong>Bureau :</strong> <span class="phone">+243 123 456 789</span></p>
+                        <p><strong>Adresse :</strong> Ndosho, Avenue Rulenga, N°003.</p>
+                        <p class="italic"><strong>Téléphone :</strong> <span class="phone">+243 123 456 789</span>.</p>
+                        <p class="italic"><strong>Bureau :</strong> <span class="phone">+243 123 456 789</span>.</p>
                         <a href="mailto:info@wokovuway.org?subject=Demande&body=Bonjour, j’ai une question à propos de...">
                             <span class="email">info@wokovuway.org</span>
                         </a>
@@ -134,14 +105,13 @@
                         <br>
                         <br>
                         <ul>
-                            <li><a href="terms.html">Terms and Conditions</a></li>
-                            <li><a href="accessibility.html">Accessibility Statement</a></li>
-                            <a href="faq_fr.html" target="_blank">FAQ</a>
+                            <li><a href="terms.html">Termes et conditions</a></li>
+                            <li><a href="accessibility.html">Déclaration d’accessibilité</a></li>
+                            <li><a href="faq_fr.html" target="_blank">FAQ</a></li>
                             <ul>
                                 <li><a href="newsletter_fr.html" target="_blank">Newsletter</a></li>
                             </ul>
-
-                            <li><a href="volunteer.html">Volunteer</a></li>
+                            <li><a href="volunteer.html">Bénévolat</a></li>
                         </ul>
                     </div>
                     <div class="footer-column">
@@ -154,24 +124,21 @@
                     </div>
                     <div class="partners">
                         <h4>Nos partenaires</h4>
-                        <a href="https://menengage.org/" target="_blank"><img src="images/men_en.png"
-                            alt="Partner 1"></a>
-                    <a href="https://cd.usembassy.gov/kinshasa/" target="_blank"><img src="images/uskin.jpg"
-                            alt="Partner 2"></a>
-                    <a href="https://www.medecinssansfrontieres.ca/" target="_blank"><img src="images/med.webp"
-                            alt="Partner 3"></a>
-                    <a href="https://www.unfpa.org/" target="_blank"><img src="images/unfpa.png"
-                            alt="Partner 4"></a>
+                        <a href="https://menengage.org/" target="_blank"><img src="images/men_en.png" alt="Partenaire 1"></a>
+                        <a href="https://cd.usembassy.gov/kinshasa/" target="_blank"><img src="images/uskin.jpg" alt="Partenaire 2"></a>
+                        <a href="https://www.medecinssansfrontieres.ca/" target="_blank"><img src="images/med.webp" alt="Partenaire 3"></a>
+                        <a href="https://www.unfpa.org/" target="_blank"><img src="images/unfpa.png" alt="Partenaire 4"></a>
                     </div>
                 </div>
             </div>
             <div class="footer-bottom">
                 <p>© 2025 Wokovu Way. Tous droits réservés.</p>
-                <p> Conçu et développé par <a href="https://www.goshenwebx.com/" target="_blank">Goshen WebX</a></p>
+                <p>Conçu et développé par <a href="https://www.goshenwebx.com/" target="_blank">Goshen WebX</a>.</p>
             </div>
         </footer>
     </div>
 
-    <script src="js/accessibility.js"></script>
+    <script src="js/contact.js"></script>
 </body>
+
 </html>
