--- a/contact_french.html
+++ b/contact_french.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Wokovuway Org. - Contact</title>
+    <title>Contact - Wokovuway Org.</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Organisation Humanitaire Wokovuway">
+    <meta name="description" content="Organisation Humanitaire Wokovuway.">
     <meta name="keywords" content="Wokovuway, humanitaire, Congo, éducation, charité, réactif">
     <meta name="author" content="Wokovuway">
     <link rel="stylesheet" href="css/contact.css">
@@ -38,7 +38,7 @@
                 </nav>
             </div>
         </header>
-        <!-- Rest of the HTML (contact section and footer) remains unchanged -->
+        <!-- Section Contact -->
         <section class="contact-section container">
             <h1 class="text-center">Prenez contact</h1>
             <p class="text-center lead">Nous serions ravis d'avoir de vos nouvelles ! Remplissez le formulaire ci-dessous, et nous vous répondrons dès que possible.</p>
@@ -67,13 +67,13 @@
                 <div class="col-md-6 contact-info">
                     <h3>Informations de contact</h3>
                     <p><i class="fas fa-envelope"></i> Email : <a href="mailto:info@wokovuway.org">info@wokovuway.org</a></p>
-                    <p><i class="fas fa-phone"></i> Téléphone : +243 123 456 789debit</p>
-                    <p><i class="fas fa-map-marker-alt"></i> Adresse : Ndosho, Avenue Rulenga, N°003</p>
+                    <p><i class="fas fa-phone"></i> Téléphone : +243 123 456 789</p>
+                    <p><i class="fas fa-map-marker-alt"></i> Adresse : Ndosho, Avenue Rulenga, N°003, Goma, RDC</p>
                 </div>
             </div>
         </section>
 
-        <!-- Footer Section -->
+        <!-- Section Pied de page -->
         <footer>
             <div class="container">
                 <div class="footer-row">
@@ -84,9 +84,9 @@
                     </div>
                     <div class="footer-column">
                         <h4>Contact</h4>
-                        <p><strong>Adresse :</strong> Ndosho, Avenue Rulenga, N°003</p>
-                        <p class="italic"><strong>Téléphone :</strong><span class="phone"> +243 123 456 789</span></p>
-                        <p class="italic"><strong>Bureau :</strong> <span class="phone">+243 123 456 789</span></p>
+                        <p><strong>Adresse :</strong> Ndosho, Avenue Rulenga, N°003.</p>
+                        <p class="italic"><strong>Téléphone :</strong> <span class="phone">+243 123 456 789</span>.</p>
+                        <p class="italic"><strong>Bureau :</strong> <span class="phone">+243 123 456 789</span>.</p>
                         <a href="mailto:info@wokovuway.org?subject=Demande&body=Bonjour, j’ai une question à propos de...">
                             <span class="email">info@wokovuway.org</span>
                         </a>
@@ -105,14 +105,13 @@
                         <br>
                         <br>
                         <ul>
-                            <li><a href="terms.html">Terms and Conditions</a></li>
-                            <li><a href="accessibility.html">Accessibility Statement</a></li>
-                            <a href="faq_fr.html" target="_blank">FAQ</a>
+                            <li><a href="terms.html">Termes et conditions</a></li>
+                            <li><a href="accessibility.html">Déclaration d’accessibilité</a></li>
+                            <li><a href="faq_fr.html" target="_blank">FAQ</a></li>
                             <ul>
                                 <li><a href="newsletter_fr.html" target="_blank">Newsletter</a></li>
                             </ul>
-
-                            <li><a href="volunteer.html">Volunteer</a></li>
+                            <li><a href="volunteer.html">Bénévolat</a></li>
                         </ul>
                     </div>
                     <div class="footer-column">
@@ -125,20 +124,16 @@
                     </div>
                     <div class="partners">
                         <h4>Nos partenaires</h4>
-                        <a href="https://menengage.org/" target="_blank"><img src="images/men_en.png"
-                            alt="Partner 1"></a>
-                    <a href="https://cd.usembassy.gov/kinshasa/" target="_blank"><img src="images/uskin.jpg"
-                            alt="Partner 2"></a>
-                    <a href="https://www.medecinssansfrontieres.ca/" target="_blank"><img src="images/med.webp"
-                            alt="Partner 3"></a>
-                    <a href="https://www.unfpa.org/" target="_blank"><img src="images/unfpa.png"
-                            alt="Partner 4"></a>
+                        <a href="https://menengage.org/" target="_blank"><img src="images/men_en.png" alt="Partenaire 1"></a>
+                        <a href="https://cd.usembassy.gov/kinshasa/" target="_blank"><img src="images/uskin.jpg" alt="Partenaire 2"></a>
+                        <a href="https://www.medecinssansfrontieres.ca/" target="_blank"><img src="images/med.webp" alt="Partenaire 3"></a>
+                        <a href="https://www.unfpa.org/" target="_blank"><img src="images/unfpa.png" alt="Partenaire 4"></a>
                     </div>
                 </div>
             </div>
             <div class="footer-bottom">
                 <p>© 2025 Wokovu Way. Tous droits réservés.</p>
-                <p> Conçu et développé par <a href="https://www.goshenwebx.com/" target="_blank">Goshen WebX</a></p>
+                <p>Conçu et développé par <a href="https://www.goshenwebx.com/" target="_blank">Goshen WebX</a>.</p>
             </div>
         </footer>
     </div>
