--- a/index_french.html
+++ b/index_french.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Wokovuway Org.</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Organisation Humanitaire Wokovuway">
+    <meta name="description" content="Organisation Humanitaire Wokovuway.">
     <meta name="keywords" content="Wokovuway, humanitaire, Congo, éducation, charité, réactif">
     <meta name="author" content="Wokovuway">
     <link rel="stylesheet" href="css/style.css">
@@ -38,34 +38,34 @@
                 </nav>
             </div>
         </header>
-        <!-- Hero Section -->
+        <!-- Section Héros -->
         <section id="wokovuway-hero">
             <div class="slider">
                 <div class="slide active" style="background-image: url('images/hero.jpg');">
                     <div class="slide-content">
                         <h1>Renforcer les communautés</h1>
-                        <p>Construire un avenir meilleur pour ceux dans le besoin</p>
+                        <p>Construire un avenir meilleur pour ceux dans le besoin.</p>
                         <a href="donate_french.html" class="btn">Faire un don maintenant</a>
                     </div>
                 </div>
                 <div class="slide" style="background-image: url('images/eleve.jpg');">
                     <div class="slide-content">
                         <h1>Construire pour leur avenir</h1>
-                        <p>Déverrouiller le potentiel un enfant à la fois</p>
+                        <p>Déverrouiller le potentiel un enfant à la fois.</p>
                         <a href="donate_french.html" class="btn">Soutenez-nous</a>
                     </div>
                 </div>
                 <div class="slide" style="background-image: url('images/water_is_life.jpg');">
                     <div class="slide-content">
-                        <h1>L'eau c'est la vie, une nécessité pour tous</h1>
-                        <p>Votre soutien apporte de l'espoir</p>
+                        <h1>L'eau, c'est la vie, une nécessité pour tous</h1>
+                        <p>Votre soutien apporte de l'espoir.</p>
                         <a href="donate_french.html" class="btn">Soutenez-nous</a>
                     </div>
                 </div>
             </div>
             <div class="slider-dots"></div>
         </section>
-        <!-- Features Section -->
+        <!-- Section Caractéristiques -->
         <section id="wokovuway-features">
             <div class="features-container">
                 <div class="feature-item">
@@ -86,7 +86,7 @@
             </div>
         </section>
 
-        <!-- Mission Section -->
+        <!-- Section Mission -->
         <section id="wokovuway-mission" class="section-gray">
             <div class="mission-container">
                 <h2>Répandre la joie, donner librement</h2>
@@ -95,11 +95,11 @@
             </div>
         </section>
 
-        <!-- Gallery Section -->
+        <!-- Section Galerie -->
         <section id="wokovuway-gallery">
             <div class="gallery-container">
                 <h2>Notre galerie</h2>
-                <p>La compassion en action</p>
+                <p>La compassion en action.</p>
                 <button class="gallery-prev">❮</button>
                 <div class="gallery-slider">
                     <div class="gallery-slide" style="background-image: url('images/roof_edited.jpg');"><h3>Faites un don aujourd'hui</h3></div>
@@ -111,7 +111,7 @@
             </div>
         </section>
 
-        <!-- Support Section -->
+        <!-- Section Soutien -->
         <section id="wokovuway-support" class="section-gray">
             <div class="support-container">
                 <h2>Soutenez-nous</h2>
@@ -120,11 +120,11 @@
             </div>
         </section>
 
-        <!-- Impact Section -->
+        <!-- Section Impact -->
         <section id="wokovuway-impact">
             <div class="impact-container">
                 <h2>Notre impact</h2>
-                <p>Transformer des vies grâce à votre générosité</p>
+                <p>Transformer des vies grâce à votre générosité.</p>
                 <div class="impact-stats">
                     <div class="impact-item"><h3>1 000+</h3><p>Enfants éduqués</p></div>
                     <div class="impact-item"><h3>10+</h3><p>Communautés soutenues</p></div>
@@ -134,7 +134,7 @@
             </div>
         </section>
 
-        <!-- Footer Section -->
+        <!-- Section Pied de page -->
         <footer>
             <div class="container">
                 <div class="footer-row">
@@ -145,9 +145,9 @@
                     </div>
                     <div class="footer-column">
                         <h4>Contact</h4>
-                        <p><strong>Adresse :</strong> Ndosho, Avenue Rulenga, N°003</p>
-                        <p class="italic"><strong>Téléphone :</strong><span class="phone"> +243 123 456 789</span></p>
-                        <p class="italic"><strong>Bureau :</strong> <span class="phone">+243 123 456 789</span></p>
+                        <p><strong>Adresse :</strong> Ndosho, Avenue Rulenga, N°003.</p>
+                        <p class="italic"><strong>Téléphone :</strong> <span class="phone">+243 123 456 789</span>.</p>
+                        <p class="italic"><strong>Bureau :</strong> <span class="phone">+243 123 456 789</span>.</p>
                         <a href="mailto:info@wokovuway.org?subject=Demande&body=Bonjour, j’ai une question à propos de...">
                             <span class="email">info@wokovuway.org</span>
                         </a>
@@ -166,14 +166,13 @@
                         <br>
                         <br>
                         <ul>
-                            <li><a href="terms.html">Terms and Conditions</a></li>
-                            <li><a href="accessibility.html">Accessibility Statement</a></li>
-                            <a href="faq_fr.html" target="_blank">FAQ</a>
+                            <li><a href="terms.html">Termes et conditions</a></li>
+                            <li><a href="accessibility.html">Déclaration d’accessibilité</a></li>
+                            <li><a href="faq_fr.html" target="_blank">FAQ</a></li>
                             <ul>
                                 <li><a href="newsletter_fr.html" target="_blank">Newsletter</a></li>
                             </ul>
-
-                            <li><a href="volunteer.html">Volunteer</a></li>
+                            <li><a href="volunteer.html">Bénévolat</a></li>
                         </ul>
                     </div>
                     <div class="footer-column">
@@ -185,20 +184,17 @@
                         </div>
                     </div>
                     <div class="partners">
-                        <a href="https://menengage.org/" target="_blank"><img src="images/men_en.png"
-                            alt="Partner 1"></a>
-                    <a href="https://cd.usembassy.gov/kinshasa/" target="_blank"><img src="images/uskin.jpg"
-                            alt="Partner 2"></a>
-                    <a href="https://www.medecinssansfrontieres.ca/" target="_blank"><img src="images/med.webp"
-                            alt="Partner 3"></a>
-                    <a href="https://www.unfpa.org/" target="_blank"><img src="images/unfpa.png"
-                            alt="Partner 4"></a>
+                        <h4>Nos partenaires</h4>
+                        <a href="https://menengage.org/" target="_blank"><img src="images/men_en.png" alt="Partenaire 1"></a>
+                        <a href="https://cd.usembassy.gov/kinshasa/" target="_blank"><img src="images/uskin.jpg" alt="Partenaire 2"></a>
+                        <a href="https://www.medecinssansfrontieres.ca/" target="_blank"><img src="images/med.webp" alt="Partenaire 3"></a>
+                        <a href="https://www.unfpa.org/" target="_blank"><img src="images/unfpa.png" alt="Partenaire 4"></a>
                     </div>
                 </div>
             </div>
             <div class="footer-bottom">
                 <p>© 2025 Wokovu Way. Tous droits réservés.</p>
-                <p> Conçu et développé par <a href="https://www.goshenwebx.com/" target="_blank">Goshen WebX</a></p>
+                <p>Conçu et développé par <a href="https://www.goshenwebx.com/" target="_blank">Goshen WebX</a>.</p>
             </div>
         </footer>
     </div>
