--- a/newsletter.html
+++ b/newsletter.html
@@ -179,7 +179,7 @@
         </footer>
     </div>
 
-    <script src="js/newsletter.js"></script>
+    <script src="js/new.js"></script>
 </body>
 
 </html>
