--- a/newsletter_fr.html
+++ b/newsletter_fr.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Infolettre - Wokovuway Org.</title>
-    <meta name="description" content="Abonnez-vous à l’infolettre de Wokovuway pour des mises à jour sur notre travail humanitaire">
+    <meta name="description" content="Abonnez-vous à l’infolettre de Wokovuway pour des mises à jour sur notre travail humanitaire.">
     <meta name="keywords" content="Wokovuway, infolettre, humanitaire, Congo, charité, mises à jour">
     <meta name="author" content="Wokovuway">
     <link rel="stylesheet" href="css/newsletter.css">
@@ -30,7 +30,7 @@
                         <li><a href="donate_french.html">Faire un don</a></li>
                         <li><a href="contact_french.html">Contact</a></li>
                         <li class="lang-toggle">
-                            <a href="newsletter_fr.html" title="Passer à l'anglais">
+                            <a href="newsletter.html" title="Passer à l'anglais">
                                 <i class="fas fa-globe"></i> EN
                             </a>
                         </li>
@@ -51,7 +51,7 @@
             <!-- Formulaire d'abonnement -->
             <section class="newsletter-section">
                 <h2>Abonnez-vous maintenant</h2>
-                <p>Entrez votre email ci-dessous pour rejoindre notre liste de diffusion. Nous promettons de remplir votre boîte de réception de mises à jour significatives—pas de spam, juste de l’impact !</p>
+                <p>Entrez votre email ci-dessous pour rejoindre notre liste de diffusion. Nous promettons de remplir votre boîte de réception de mises à jour significatives — pas de spam, juste de l’impact !</p>
                 <form id="newsletter-form" action="#" method="POST">
                     <div class="form-group">
                         <label for="email">Adresse email :</label>
@@ -59,7 +59,7 @@
                     </div>
                     <button type="submit" class="submit-btn">S’abonner</button>
                 </form>
-                <p class="form-note">En vous abonnant, vous acceptez notre <a href="privacy.html">Politique de confidentialité</a> et nos <a href="conditions.html">Conditions d’utilisation</a>.</p>
+                <p class="form-note">En vous abonnant, vous acceptez notre <a href="privacy.html">politique de confidentialité</a> et nos <a href="conditions.html">conditions d’utilisation</a>.</p>
             </section>
 
             <!-- Avantages -->
@@ -89,9 +89,9 @@
             <section class="newsletter-section">
                 <h2>Questions ?</h2>
                 <p>Si vous avez des questions sur notre infolettre ou besoin d’aide avec votre abonnement, contactez-nous :</p>
-                <p><strong>Email :</strong> <a href="mailto:info@wokovuway.org">info@wokovuway.org</a></p>
-                <p><strong>Téléphone :</strong> +243 123 456 789</p>
-                <p><strong>Adresse :</strong> Ndosho, Avenue Rulenga, N°003, Goma, RDC</p>
+                <p><strong>Email :</strong> <a href="mailto:info@wokovuway.org">info@wokovuway.org</a>.</p>
+                <p><strong>Téléphone :</strong> +243 123 456 789.</p>
+                <p><strong>Adresse :</strong> Ndosho, Avenue Rulenga, N°003, Goma, RDC.</p>
             </section>
         </div>
 
@@ -106,9 +106,9 @@
                     </div>
                     <div class="footer-column">
                         <h4>Contact</h4>
-                        <p><strong>Adresse :</strong> Ndosho, Avenue Rulenga, N°003</p>
-                        <p class="italic"><strong>Téléphone :</strong><span class="phone"> +243 123 456 789</span></p>
-                        <p class="italic"><strong>Bureau :</strong> <span class="phone">+243 123 456 789</span></p>
+                        <p><strong>Adresse :</strong> Ndosho, Avenue Rulenga, N°003.</p>
+                        <p class="italic"><strong>Téléphone :</strong> <span class="phone">+243 123 456 789</span>.</p>
+                        <p class="italic"><strong>Bureau :</strong> <span class="phone">+243 123 456 789</span>.</p>
                         <a href="mailto:info@wokovuway.org?subject=Demande&body=Bonjour, j’ai une question à propos de...">
                             <span class="email">info@wokovuway.org</span>
                         </a>
@@ -127,14 +127,13 @@
                         <br>
                         <br>
                         <ul>
-                            <li><a href="terms.html">Terms and Conditions</a></li>
-                            <li><a href="accessibility.html">Accessibility Statement</a></li>
-                            <a href="faq.html" target="_blank">FAQ</a>
+                            <li><a href="terms.html">Termes et conditions</a></li>
+                            <li><a href="accessibility.html">Déclaration d’accessibilité</a></li>
+                            <li><a href="faq.html" target="_blank">FAQ</a></li>
                             <ul>
                                 <li><a href="newsletter_fr.html" target="_blank">Newsletter</a></li>
                             </ul>
-
-                            <li><a href="volunteer.html">Volunteer</a></li>
+                            <li><a href="volunteer.html">Bénévolat</a></li>
                         </ul>
                     </div>
                     <div class="footer-column">
@@ -147,24 +146,20 @@
                     </div>
                     <div class="partners">
                         <h4>Nos partenaires</h4>
-                        <a href="https://menengage.org/" target="_blank"><img src="images/men_en.png"
-                            alt="Partner 1"></a>
-                    <a href="https://cd.usembassy.gov/kinshasa/" target="_blank"><img src="images/uskin.jpg"
-                            alt="Partner 2"></a>
-                    <a href="https://www.medecinssansfrontieres.ca/" target="_blank"><img src="images/med.webp"
-                            alt="Partner 3"></a>
-                    <a href="https://www.unfpa.org/" target="_blank"><img src="images/unfpa.png"
-                            alt="Partner 4"></a>
+                        <a href="https://menengage.org/" target="_blank"><img src="images/men_en.png" alt="Partenaire 1"></a>
+                        <a href="https://cd.usembassy.gov/kinshasa/" target="_blank"><img src="images/uskin.jpg" alt="Partenaire 2"></a>
+                        <a href="https://www.medecinssansfrontieres.ca/" target="_blank"><img src="images/med.webp" alt="Partenaire 3"></a>
+                        <a href="https://www.unfpa.org/" target="_blank"><img src="images/unfpa.png" alt="Partenaire 4"></a>
                     </div>
                 </div>
             </div>
             <div class="footer-bottom">
                 <p>© 2025 Wokovu Way. Tous droits réservés.</p>
-                <p> Conçu et développé par <a href="https://www.goshenwebx.com/" target="_blank">Goshen WebX</a></p>
+                <p>Conçu et développé par <a href="https://www.goshenwebx.com/" target="_blank">Goshen WebX</a>.</p>
             </div>
         </footer>
     </div>
 
-    <script src="js/newsletter.js"></script>
+    <script src="js/new.js"></script>
 </body>
 </html>
