--- a/privacy_fr.html
+++ b/privacy_fr.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Politique de confidentialité - Wokovuway Org.</title>
-    <meta name="description" content="Politique de confidentialité de l’Organisation Wokovuway">
+    <meta name="description" content="Politique de confidentialité de l’Organisation Wokovuway.">
     <meta name="keywords" content="Wokovuway, politique de confidentialité, humanitaire, Congo, charité">
     <meta name="author" content="Wokovuway">
     <link rel="stylesheet" href="css/privacy.css">
@@ -39,7 +39,7 @@
             </div>
         </header>
         <div class="container">
-            <!-- Page Title -->
+            <!-- Titre de la page -->
             <h1 class="page-title">Politique de confidentialité</h1>
             
             <!-- Introduction -->
@@ -48,7 +48,7 @@
                 <p>L’Organisation à but non lucratif Wokovuway s’engage à protéger la vie privée de tous les individus. Cette politique de confidentialité décrit les méthodes de collecte, d’utilisation, de divulgation et de protection des informations personnelles lors de l’interaction avec le site web, des dons ou de l’engagement avec les services proposés. En utilisant nos services, les individus consentent aux termes énoncés dans cette politique. La politique a été mise à jour pour la dernière fois le 11 mars 2025.</p>
             </section>
 
-            <!-- Information We Collect -->
+            <!-- Informations que nous collectons -->
             <section class="policy-section">
                 <h2>Informations que nous collectons</h2>
                 <p>Nous pouvons collecter les types d’informations suivants :</p>
@@ -59,7 +59,7 @@
                 </ul>
             </section>
 
-            <!-- How We Use Your Information -->
+            <!-- Comment nous utilisons vos informations -->
             <section class="policy-section">
                 <h2>Comment nous utilisons vos informations</h2>
                 <p>Nous utilisons vos informations pour :</p>
@@ -71,7 +71,7 @@
                 </ul>
             </section>
 
-            <!-- Information Sharing -->
+            <!-- Partage des informations -->
             <section class="policy-section">
                 <h2>Partage des informations</h2>
                 <p>Nous ne vendons ni ne louons vos informations personnelles. Nous pouvons les partager avec :</p>
@@ -82,13 +82,13 @@
                 </ul>
             </section>
 
-            <!-- Data Security -->
+            <!-- Sécurité des données -->
             <section class="policy-section">
                 <h2>Sécurité des données</h2>
                 <p>Nous mettons en œuvre des mesures de sécurité raisonnables (par exemple, cryptage, serveurs sécurisés) pour protéger vos informations. Cependant, aucune transmission en ligne n’est totalement sécurisée, et nous ne pouvons garantir une sécurité absolue.</p>
             </section>
 
-            <!-- Your Rights -->
+            <!-- Vos droits -->
             <section class="policy-section">
                 <h2>Vos droits</h2>
                 <p>Vous avez le droit de :</p>
@@ -105,23 +105,23 @@
                 <p>Nous utilisons des cookies pour améliorer votre expérience, analyser le trafic et personnaliser le contenu. Vous pouvez gérer les préférences de cookies via les paramètres de votre navigateur.</p>
             </section>
 
-            <!-- Changes to Policy -->
+            <!-- Modifications de cette politique -->
             <section class="policy-section">
                 <h2>Modifications de cette politique</h2>
                 <p>Nous pouvons mettre à jour cette politique de confidentialité périodiquement. Les modifications seront publiées ici avec la date mise à jour. L’utilisation continue de nos services après les modifications implique l’acceptation.</p>
             </section>
 
-            <!-- Contact Us -->
+            <!-- Contactez-nous -->
             <section class="policy-section">
                 <h2>Contactez-nous</h2>
                 <p>Si vous avez des questions sur cette politique de confidentialité, contactez-nous à :</p>
-                <p><strong>Email :</strong> <a href="mailto:info@wokovuway.org">info@wokovuway.org</a></p>
-                <p><strong>Adresse :</strong> Ndosho, Avenue Rulenga, N°003, Goma, RDC</p>
-                <p><strong>Téléphone :</strong> +243 123 456 789</p>
+                <p><strong>Email :</strong> <a href="mailto:info@wokovuway.org">info@wokovuway.org</a>.</p>
+                <p><strong>Adresse :</strong> Ndosho, Avenue Rulenga, N°003, Goma, RDC.</p>
+                <p><strong>Téléphone :</strong> +243 123 456 789.</p>
             </section>
         </div>
 
-        <!-- Footer Section -->
+        <!-- Section Pied de page -->
         <footer>
             <div class="container">
                 <div class="footer-row">
@@ -132,9 +132,9 @@
                     </div>
                     <div class="footer-column">
                         <h4>Contact</h4>
-                        <p><strong>Adresse :</strong> Ndosho, Avenue Rulenga, N°003</p>
-                        <p class="italic"><strong>Téléphone :</strong><span class="phone"> +243 123 456 789</span></p>
-                        <p class="italic"><strong>Bureau :</strong> <span class="phone">+243 123 456 789</span></p>
+                        <p><strong>Adresse :</strong> Ndosho, Avenue Rulenga, N°003.</p>
+                        <p class="italic"><strong>Téléphone :</strong> <span class="phone">+243 123 456 789</span>.</p>
+                        <p class="italic"><strong>Bureau :</strong> <span class="phone">+243 123 456 789</span>.</p>
                         <a href="mailto:info@wokovuway.org?subject=Demande&body=Bonjour, j’ai une question à propos de...">
                             <span class="email">info@wokovuway.org</span>
                         </a>
@@ -153,14 +153,13 @@
                         <br>
                         <br>
                         <ul>
-                            <li><a href="terms.html">Terms and Conditions</a></li>
-                            <li><a href="accessibility.html">Accessibility Statement</a></li>
-                            <a href="faq_fr.html" target="_blank">FAQ</a>
+                            <li><a href="terms.html">Termes et conditions</a></li>
+                            <li><a href="accessibility.html">Déclaration d’accessibilité</a></li>
+                            <li><a href="faq_fr.html" target="_blank">FAQ</a></li>
                             <ul>
                                 <li><a href="newsletter.html" target="_blank">Newsletter</a></li>
                             </ul>
-
-                            <li><a href="volunteer.html">Volunteer</a></li>
+                            <li><a href="volunteer.html">Bénévolat</a></li>
                         </ul>
                     </div>
                     <div class="footer-column">
@@ -173,20 +172,16 @@
                     </div>
                     <div class="partners">
                         <h4>Nos partenaires</h4>
-                        <a href="https://menengage.org/" target="_blank"><img src="images/men_en.png"
-                            alt="Partner 1"></a>
-                    <a href="https://cd.usembassy.gov/kinshasa/" target="_blank"><img src="images/uskin.jpg"
-                            alt="Partner 2"></a>
-                    <a href="https://www.medecinssansfrontieres.ca/" target="_blank"><img src="images/med.webp"
-                            alt="Partner 3"></a>
-                    <a href="https://www.unfpa.org/" target="_blank"><img src="images/unfpa.png"
-                            alt="Partner 4"></a>
+                        <a href="https://menengage.org/" target="_blank"><img src="images/men_en.png" alt="Partenaire 1"></a>
+                        <a href="https://cd.usembassy.gov/kinshasa/" target="_blank"><img src="images/uskin.jpg" alt="Partenaire 2"></a>
+                        <a href="https://www.medecinssansfrontieres.ca/" target="_blank"><img src="images/med.webp" alt="Partenaire 3"></a>
+                        <a href="https://www.unfpa.org/" target="_blank"><img src="images/unfpa.png" alt="Partenaire 4"></a>
                     </div>
                 </div>
             </div>
             <div class="footer-bottom">
                 <p>© 2025 Wokovu Way. Tous droits réservés.</p>
-                <p> Conçu et développé par <a href="https://www.goshenwebx.com/" target="_blank">Goshen WebX</a></p>
+                <p>Conçu et développé par <a href="https://www.goshenwebx.com/" target="_blank">Goshen WebX</a>.</p>
             </div>
         </footer>
     </div>
