--- a/service_fr.html
+++ b/service_fr.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Services - Wokovuway Org.</title>
-    <meta name="description" content="Découvrez les services humanitaires offerts par l'Organisation Wokovuway au Congo et au-delà">
+    <meta name="description" content="Découvrez les services humanitaires offerts par l'Organisation Wokovuway au Congo et au-delà.">
     <meta name="keywords" content="Wokovuway, services, humanitaire, Congo, charité, éducation, aide">
     <meta name="author" content="Wokovuway">
     <link rel="stylesheet" href="css/service.css">
@@ -41,7 +41,7 @@
 
         <div class="container">
             <!-- Titre de la page -->
-            <h1 class="page-title">Nos Services</h1>
+            <h1 class="page-title">Nos services</h1>
             
             <!-- Introduction -->
             <section class="services-section">
@@ -103,9 +103,9 @@
             <section class="services-section">
                 <h2>Contactez-nous</h2>
                 <p>Pour plus d’informations sur nos services, contactez-nous :</p>
-                <p><strong>Email :</strong> <a href="mailto:info@wokovuway.org">info@wokovuway.org</a></p>
-                <p><strong>Téléphone :</strong> +243 123 456 789</p>
-                <p><strong>Adresse :</strong> Ndosho, Avenue Rulenga, N°003, Goma, RDC</p>
+                <p><strong>Email :</strong> <a href="mailto:info@wokovuway.org">info@wokovuway.org</a>.</p>
+                <p><strong>Téléphone :</strong> +243 123 456 789.</p>
+                <p><strong>Adresse :</strong> Ndosho, Avenue Rulenga, N°003, Goma, RDC.</p>
             </section>
         </div>
 
@@ -120,9 +120,9 @@
                     </div>
                     <div class="footer-column">
                         <h4>Contact</h4>
-                        <p><strong>Adresse :</strong> Ndosho, Avenue Rulenga, N°003</p>
-                        <p class="italic"><strong>Téléphone :</strong><span class="phone"> +243 123 456 789</span></p>
-                        <p class="italic"><strong>Bureau :</strong> <span class="phone">+243 123 456 789</span></p>
+                        <p><strong>Adresse :</strong> Ndosho, Avenue Rulenga, N°003.</p>
+                        <p class="italic"><strong>Téléphone :</strong> <span class="phone">+243 123 456 789</span>.</p>
+                        <p class="italic"><strong>Bureau :</strong> <span class="phone">+243 123 456 789</span>.</p>
                         <a href="mailto:info@wokovuway.org?subject=Demande&body=Bonjour, j’ai une question à propos de...">
                             <span class="email">info@wokovuway.org</span>
                         </a>
@@ -141,11 +141,11 @@
                         <br>
                         <br>
                         <ul>
-                            <li><a href="terms.html">Terms and Conditions</a></li>
-                            <li><a href="accessibility.html">Accessibility Statement</a></li>
+                            <li><a href="terms.html">Termes et conditions</a></li>
+                            <li><a href="accessibility.html">Déclaration d’accessibilité</a></li>
                             <li><a href="faq_fr.html" target="_blank">FAQ</a></li>
                             <li><a href="newsletter_fr.html" target="_blank">Newsletter</a></li>
-                            <li><a href="volunteer.html">Volunteer</a></li>
+                            <li><a href="volunteer.html">Bénévolat</a></li>
                         </ul>
                     </div>
                     <div class="footer-column">
@@ -158,20 +158,16 @@
                     </div>
                     <div class="partners">
                         <h4>Nos partenaires</h4>
-                        <a href="https://menengage.org/" target="_blank"><img src="images/men_en.png"
-                            alt="Partner 1"></a>
-                    <a href="https://cd.usembassy.gov/kinshasa/" target="_blank"><img src="images/uskin.jpg"
-                            alt="Partner 2"></a>
-                    <a href="https://www.medecinssansfrontieres.ca/" target="_blank"><img src="images/med.webp"
-                            alt="Partner 3"></a>
-                    <a href="https://www.unfpa.org/" target="_blank"><img src="images/unfpa.png"
-                            alt="Partner 4"></a>
+                        <a href="https://menengage.org/" target="_blank"><img src="images/men_en.png" alt="Partenaire 1"></a>
+                        <a href="https://cd.usembassy.gov/kinshasa/" target="_blank"><img src="images/uskin.jpg" alt="Partenaire 2"></a>
+                        <a href="https://www.medecinssansfrontieres.ca/" target="_blank"><img src="images/med.webp" alt="Partenaire 3"></a>
+                        <a href="https://www.unfpa.org/" target="_blank"><img src="images/unfpa.png" alt="Partenaire 4"></a>
                     </div>
                 </div>
             </div>
             <div class="footer-bottom">
                 <p>© 2025 Wokovu Way. Tous droits réservés.</p>
-                <p> Conçu et développé par <a href="https://www.goshenwebx.com/" target="_blank">Goshen WebX</a></p>
+                <p>Conçu et développé par <a href="https://www.goshenwebx.com/" target="_blank">Goshen WebX</a>.</p>
             </div>
         </footer>
     </div>
