--- a/success_french.html
+++ b/success_french.html
@@ -6,8 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Services - Wokovuway Org.</title>
-    <meta name="description"
-        content="Découvrez les services humanitaires offerts par l'Organisation Wokovuway au Congo et au-delà">
+    <meta name="description" content="Découvrez les services humanitaires offerts par l'Organisation Wokovuway au Congo et au-delà.">
     <meta name="keywords" content="Wokovuway, services, humanitaire, Congo, charité, éducation, aide">
     <meta name="author" content="Wokovuway">
     <link rel="stylesheet" href="css/service.css">
@@ -44,15 +43,12 @@
 
         <div class="container">
             <!-- Titre de la page -->
-            <h1 class="page-title">Nos Services</h1>
+            <h1 class="page-title">Nos services</h1>
 
             <!-- Introduction -->
             <section class="services-section">
                 <h2>Renforcer les communautés</h2>
-                <p>À l'Organisation Wokovuway, nous offrons une gamme de services humanitaires visant à améliorer la vie
-                    des populations vulnérables en République Démocratique du Congo et au-delà. Nos programmes sont
-                    conçus pour répondre aux besoins immédiats tout en favorisant une résilience et une croissance à
-                    long terme. Dernière mise à jour : 13 mars 2025.</p>
+                <p>À l'Organisation Wokovuway, nous offrons une gamme de services humanitaires visant à améliorer la vie des populations vulnérables en République Démocratique du Congo et au-delà. Nos programmes sont conçus pour répondre aux besoins immédiats tout en favorisant une résilience et une croissance à long terme. Dernière mise à jour : 13 mars 2025.</p>
             </section>
 
             <!-- Aide humanitaire -->
@@ -60,14 +56,11 @@
                 <h2>Aide humanitaire</h2>
                 <div class="service-item">
                     <h3>Secours d’urgence</h3>
-                    <p>Nous fournissons des fournitures essentielles telles que de la nourriture, de l’eau, des abris et
-                        des soins médicaux aux communautés touchées par les conflits, les déplacements ou les
-                        catastrophes naturelles.</p>
+                    <p>Nous fournissons des fournitures essentielles telles que de la nourriture, de l’eau, des abris et des soins médicaux aux communautés touchées par les conflits, les déplacements ou les catastrophes naturelles.</p>
                 </div>
                 <div class="service-item">
                     <h3>Services de santé</h3>
-                    <p>Nos cliniques mobiles et programmes de sensibilisation à la santé offrent des soins médicaux
-                        essentiels, des vaccins et un soutien à la santé maternelle dans les zones mal desservies.</p>
+                    <p>Nos cliniques mobiles et programmes de sensibilisation à la santé offrent des soins médicaux essentiels, des vaccins et un soutien à la santé maternelle dans les zones mal desservies.</p>
                 </div>
             </section>
 
@@ -76,13 +69,11 @@
                 <h2>Éducation et formation</h2>
                 <div class="service-item">
                     <h3>Programmes d’alphabétisation</h3>
-                    <p>Nous proposons une éducation de base aux enfants et aux adultes, les aidant à acquérir des
-                        compétences en lecture et en calcul pour améliorer leurs opportunités.</p>
+                    <p>Nous proposons une éducation de base aux enfants et aux adultes, les aidant à acquérir des compétences en lecture et en calcul pour améliorer leurs opportunités.</p>
                 </div>
                 <div class="service-item">
                     <h3>Formation professionnelle</h3>
-                    <p>Grâce à des ateliers et des cours de développement de compétences, nous dotons les individus de
-                        métiers tels que la couture, la menuiserie et l’agriculture pour atteindre l’autosuffisance.</p>
+                    <p>Grâce à des ateliers et des cours de développement de compétences, nous dotons les individus de métiers tels que la couture, la menuiserie et l’agriculture pour atteindre l’autosuffisance.</p>
                 </div>
             </section>
 
@@ -91,13 +82,11 @@
                 <h2>Autonomisation communautaire</h2>
                 <div class="service-item">
                     <h3>Autonomisation des femmes</h3>
-                    <p>Nous soutenons les femmes avec des ressources, des formations et des opportunités de microfinance
-                        pour démarrer de petites entreprises et diriger leurs communautés.</p>
+                    <p>Nous soutenons les femmes avec des ressources, des formations et des opportunités de microfinance pour démarrer de petites entreprises et diriger leurs communautés.</p>
                 </div>
                 <div class="service-item">
                     <h3>Développement des jeunes</h3>
-                    <p>Nos programmes engagent les jeunes à travers le mentorat, la formation au leadership et des
-                        activités récréatives pour construire un avenir meilleur.</p>
+                    <p>Nos programmes engagent les jeunes à travers le mentorat, la formation au leadership et des activités récréatives pour construire un avenir meilleur.</p>
                 </div>
             </section>
 
@@ -108,8 +97,7 @@
                 <ul class="involvement-list">
                     <li><a href="donate_fr.html">Faisant un don</a> pour financer nos programmes.</li>
                     <li><a href="volunteer_fr.html">Devenant bénévole</a> avec votre temps et vos compétences.</li>
-                    <li><a href="contact_fr.html">Nous contactant</a> pour en savoir plus sur les opportunités de
-                        partenariat.</li>
+                    <li><a href="contact_fr.html">Nous contactant</a> pour en savoir plus sur les opportunités de partenariat.</li>
                 </ul>
             </section>
 
@@ -117,9 +105,9 @@
             <section class="services-section">
                 <h2>Contactez-nous</h2>
                 <p>Pour plus d’informations sur nos services, contactez-nous :</p>
-                <p><strong>Email :</strong> <a href="mailto:info@wokovuway.org">info@wokovuway.org</a></p>
-                <p><strong>Téléphone :</strong> +243 123 456 789</p>
-                <p><strong>Adresse :</strong> Ndosho, Avenue Rulenga, N°003, Goma, RDC</p>
+                <p><strong>Email :</strong> <a href="mailto:info@wokovuway.org">info@wokovuway.org</a>.</p>
+                <p><strong>Téléphone :</strong> +243 123 456 789.</p>
+                <p><strong>Adresse :</strong> Ndosho, Avenue Rulenga, N°003, Goma, RDC.</p>
             </section>
         </div>
 
@@ -134,9 +122,9 @@
                     </div>
                     <div class="footer-column">
                         <h4>Contact</h4>
-                        <p><strong>Adresse :</strong> Ndosho, Avenue Rulenga, N°003</p>
-                        <p class="italic"><strong>Téléphone :</strong><span class="phone"> +243 123 456 789</span></p>
-                        <p class="italic"><strong>Bureau :</strong> <span class="phone">+243 123 456 789</span></p>
+                        <p><strong>Adresse :</strong> Ndosho, Avenue Rulenga, N°003.</p>
+                        <p class="italic"><strong>Téléphone :</strong> <span class="phone">+243 123 456 789</span>.</p>
+                        <p class="italic"><strong>Bureau :</strong> <span class="phone">+243 123 456 789</span>.</p>
                         <a href="mailto:info@wokovuway.org?subject=Demande&body=Bonjour, j’ai une question à propos de...">
                             <span class="email">info@wokovuway.org</span>
                         </a>
@@ -155,14 +143,13 @@
                         <br>
                         <br>
                         <ul>
-                            <li><a href="terms.html">Terms and Conditions</a></li>
-                            <li><a href="accessibility.html">Accessibility Statement</a></li>
-                            <a href="faq_fr.html" target="_blank">FAQ</a>
+                            <li><a href="terms.html">Termes et conditions</a></li>
+                            <li><a href="accessibility.html">Déclaration d’accessibilité</a></li>
+                            <li><a href="faq_fr.html" target="_blank">FAQ</a></li>
                             <ul>
                                 <li><a href="newsletter_fr.html" target="_blank">Newsletter</a></li>
                             </ul>
-
-                            <li><a href="volunteer.html">Volunteer</a></li>
+                            <li><a href="volunteer.html">Bénévolat</a></li>
                         </ul>
                     </div>
                     <div class="footer-column">
@@ -174,20 +161,17 @@
                         </div>
                     </div>
                     <div class="partners">
-                        <a href="https://menengage.org/" target="_blank"><img src="images/men_en.png"
-                            alt="Partner 1"></a>
-                    <a href="https://cd.usembassy.gov/kinshasa/" target="_blank"><img src="images/uskin.jpg"
-                            alt="Partner 2"></a>
-                    <a href="https://www.medecinssansfrontieres.ca/" target="_blank"><img src="images/med.webp"
-                            alt="Partner 3"></a>
-                    <a href="https://www.unfpa.org/" target="_blank"><img src="images/unfpa.png"
-                            alt="Partner 4"></a>
+                        <h4>Nos partenaires</h4>
+                        <a href="https://menengage.org/" target="_blank"><img src="images/men_en.png" alt="Partenaire 1"></a>
+                        <a href="https://cd.usembassy.gov/kinshasa/" target="_blank"><img src="images/uskin.jpg" alt="Partenaire 2"></a>
+                        <a href="https://www.medecinssansfrontieres.ca/" target="_blank"><img src="images/med.webp" alt="Partenaire 3"></a>
+                        <a href="https://www.unfpa.org/" target="_blank"><img src="images/unfpa.png" alt="Partenaire 4"></a>
                     </div>
                 </div>
             </div>
             <div class="footer-bottom">
                 <p>© 2025 Wokovu Way. Tous droits réservés.</p>
-                <p> Conçu et développé par <a href="https://www.goshenwebx.com/" target="_blank">Goshen WebX</a></p>
+                <p>Conçu et développé par <a href="https://www.goshenwebx.com/" target="_blank">Goshen WebX</a>.</p>
             </div>
         </footer>
     </div>
