--- a/team_french.html
+++ b/team_french.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Notre Équipe - Wokovuway Org.</title>
-    <meta name="description" content="Rencontrez l'équipe de l'Organisation Humanitaire Wokovuway">
+    <title>Notre équipe - Wokovuway Org.</title>
+    <meta name="description" content="Rencontrez l'équipe de l'Organisation Humanitaire Wokovuway.">
     <meta name="keywords" content="Wokovuway, humanitaire, Congo, équipe, charité">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/team.css">
@@ -40,29 +40,28 @@
             </div>
         </header>
 
-        <!-- Team Section -->
+        <!-- Section Équipe -->
         <section id="our-team" class="container">
             <div class="row text-center">
                 <h1>Rencontrez notre équipe</h1>
-                <p class="lead">Les individus dévoués qui font avancer la mission de Wokovuway.</p>
+                <p class="lead">Les individus engagés qui propulsent la vision de Wokovuway vers l’avant.</p>
             </div>
             <div class="row team-members">
                 <div class="team-item">
-                    <img src="images/director.jpeg" alt="Membre de l'équipe 1" class="team-img">
+                    <img src="images/director.jpeg" alt="Direlle Bagula" class="team-img">
                     <div class="team-description">
                         <h3>
-                            Directeur Bagula
+                            Direlle Bagula
                             <a href="https://www.linkedin.com/in/johnsmith" target="_blank" style="margin-left: 10px;">
                                 <i class="fab fa-linkedin" style="font-size: 1.2rem; color: #0077b5;"></i>
                             </a>
                         </h3>
-                        <p class="role">Fondateur & Directeur</p>
-                        <p>Bagula apporte plus de 15 ans d'expérience humanitaire, menant des efforts de secours
-                            impactants pour les communautés déplacées au Congo.</p>
+                        <p class="role">Fondateur et Directeur</p>
+                        <p>Bagula apporte plus de 15 ans d'expérience humanitaire, menant des efforts de secours impactants pour les communautés déplacées au Congo.</p>
                     </div>
                 </div>
                 <div class="team-item">
-                    <img src="images/jhon.jpg" alt="Membre de l'équipe 2" class="team-img">
+                    <img src="images/jhon.jpg" alt="Nathalis Bahidika" class="team-img">
                     <div class="team-description">
                         <h3>
                             Nathalis Bahidika
@@ -71,12 +70,11 @@
                             </a>
                         </h3>
                         <p class="role">Gestionnaire de programme</p>
-                        <p>Dr. Nathan dirige nos initiatives en éducation et santé, pilotant des projets impactants pour
-                            les communautés vulnérables.</p>
+                        <p>Dr Nathan dirige nos initiatives en éducation et santé, pilotant des projets impactants pour les communautés vulnérables.</p>
                     </div>
                 </div>
                 <div class="team-item">
-                    <img src="images/maleck.jpg" alt="Membre de l'équipe 3" class="team-img">
+                    <img src="images/maleck.jpg" alt="Vedaste Malekera" class="team-img">
                     <div class="team-description">
                         <h3>
                             Vedaste Malekera
@@ -85,13 +83,11 @@
                             </a>
                         </h3>
                         <p class="role">Coordinateur de sensibilisation</p>
-                        <p>Vedaste, notre gestionnaire financier, nous connecte avec des partenaires locaux et des
-                            communautés, établissant la confiance et assurant que chaque don est utilisé efficacement,
-                            maintenant transparence et responsabilité dans toutes nos opérations.</p>
+                        <p>Vedaste, notre gestionnaire financier, nous connecte avec des partenaires locaux et des communautés, établissant la confiance et assurant que chaque don est utilisé efficacement, maintenant transparence et responsabilité dans toutes nos opérations.</p>
                     </div>
                 </div>
                 <div class="team-item">
-                    <img src="images/Moses.jpg" alt="Membre de l'équipe 4" class="team-img">
+                    <img src="images/Moses.jpg" alt="Moise Bisimwa" class="team-img">
                     <div class="team-description">
                         <h3>
                             Moise Bisimwa
@@ -100,13 +96,13 @@
                             </a>
                         </h3>
                         <p class="role">Spécialiste IT</p>
-                        <p>Moise assure la sécurité des systèmes et améliore le développement de la plateforme.</p>
+                        <p>Moise garantit la sécurité des systèmes, améliore le développement de la plateforme et optimise la présence en ligne avec des solutions web adaptées.</p>
                     </div>
                 </div>
             </div>
         </section>
 
-        <!-- Footer Section -->
+        <!-- Section Pied de page -->
         <footer>
             <div class="container">
                 <div class="footer-row">
@@ -117,9 +113,9 @@
                     </div>
                     <div class="footer-column">
                         <h4>Contact</h4>
-                        <p><strong>Adresse :</strong> Ndosho, Avenue Rulenga, N°003</p>
-                        <p class="italic"><strong>Téléphone :</strong><span class="phone"> +243 123 456 789</span></p>
-                        <p class="italic"><strong>Bureau :</strong> <span class="phone">+243 123 456 789</span></p>
+                        <p><strong>Adresse :</strong> Ndosho, Avenue Rulenga, N°003.</p>
+                        <p class="italic"><strong>Téléphone :</strong> <span class="phone">+243 123 456 789</span>.</p>
+                        <p class="italic"><strong>Bureau :</strong> <span class="phone">+243 123 456 789</span>.</p>
                         <a href="mailto:info@wokovuway.org?subject=Demande&body=Bonjour, j’ai une question à propos de...">
                             <span class="email">info@wokovuway.org</span>
                         </a>
@@ -138,14 +134,13 @@
                         <br>
                         <br>
                         <ul>
-                            <li><a href="terms.html">Terms and Conditions</a></li>
-                            <li><a href="accessibility.html">Accessibility Statement</a></li>
-                            <a href="faq_fr.html" target="_blank">FAQ</a>
+                            <li><a href="terms.html">Termes et conditions</a></li>
+                            <li><a href="accessibility.html">Déclaration d’accessibilité</a></li>
+                            <li><a href="faq_fr.html" target="_blank">FAQ</a></li>
                             <ul>
                                 <li><a href="newsletter.html" target="_blank">Newsletter</a></li>
                             </ul>
-
-                            <li><a href="volunteer.html">Volunteer</a></li>
+                            <li><a href="volunteer.html">Bénévolat</a></li>
                         </ul>
                     </div>
                     <div class="footer-column">
@@ -158,20 +153,16 @@
                     </div>
                     <div class="partners">
                         <h4>Nos partenaires</h4>
-                        <a href="https://menengage.org/" target="_blank"><img src="images/men_en.png"
-                            alt="Partner 1"></a>
-                    <a href="https://cd.usembassy.gov/kinshasa/" target="_blank"><img src="images/uskin.jpg"
-                            alt="Partner 2"></a>
-                    <a href="https://www.medecinssansfrontieres.ca/" target="_blank"><img src="images/med.webp"
-                            alt="Partner 3"></a>
-                    <a href="https://www.unfpa.org/" target="_blank"><img src="images/unfpa.png"
-                            alt="Partner 4"></a>
+                        <a href="https://menengage.org/" target="_blank"><img src="images/men_en.png" alt="Partenaire 1"></a>
+                        <a href="https://cd.usembassy.gov/kinshasa/" target="_blank"><img src="images/uskin.jpg" alt="Partenaire 2"></a>
+                        <a href="https://www.medecinssansfrontieres.ca/" target="_blank"><img src="images/med.webp" alt="Partenaire 3"></a>
+                        <a href="https://www.unfpa.org/" target="_blank"><img src="images/unfpa.png" alt="Partenaire 4"></a>
                     </div>
                 </div>
             </div>
             <div class="footer-bottom">
                 <p>© 2025 Wokovu Way. Tous droits réservés.</p>
-                <p> Conçu et développé par <a href="https://www.goshenwebx.com/" target="_blank">Goshen WebX</a></p>
+                <p>Conçu et développé par <a href="https://www.goshenwebx.com/" target="_blank">Goshen WebX</a>.</p>
             </div>
         </footer>
     </div>
