--- a/volunteer_fr.html
+++ b/volunteer_fr.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bénévolat - Wokovuway Org.</title>
-    <meta name="description" content="Devenez bénévole avec Wokovuway pour soutenir les efforts humanitaires au Congo">
+    <meta name="description" content="Devenez bénévole avec Wokovuway pour soutenir les efforts humanitaires au Congo.">
     <meta name="keywords" content="Wokovuway, bénévole, humanitaire, Congo, charité, s’impliquer">
     <meta name="author" content="Wokovuway">
     <link rel="stylesheet" href="css/volunteer.css">
@@ -31,7 +31,6 @@
                         <li><a href="success_french.html">Histoires de succès</a></li>
                         <li><a href="donate_french.html">Faire un don</a></li>
                         <li><a href="contact_french.html">Contact</a></li>
-
                         <li class="lang-toggle">
                             <a href="volunteer.html" title="Passer à l'anglais">
                                 <i class="fas fa-globe"></i> EN
@@ -49,24 +48,17 @@
             <!-- Introduction -->
             <section class="volunteer-section">
                 <h2>Faites une différence</h2>
-                <p>Rejoignez-nous dans notre mission d’autonomiser les communautés en République Démocratique du Congo
-                    et au-delà. Les bénévoles sont au cœur de Wokovuway, apportant compétences, passion et dévouement à
-                    nos efforts humanitaires. Que vous soyez local ou international, votre temps et votre énergie
-                    peuvent avoir un impact durable. Dernière mise à jour : 13 mars 2025.</p>
+                <p>Rejoignez-nous dans notre mission d’autonomiser les communautés en République Démocratique du Congo et au-delà. Les bénévoles sont au cœur de Wokovuway, apportant compétences, passion et dévouement à nos efforts humanitaires. Que vous soyez local ou international, votre temps et votre énergie peuvent avoir un impact durable. Dernière mise à jour : 13 mars 2025.</p>
             </section>
 
             <!-- Pourquoi devenir bénévole -->
             <section class="volunteer-section">
                 <h2>Pourquoi devenir bénévole avec nous ?</h2>
                 <ul class="benefits-list">
-                    <li><strong>Impacter des vies :</strong> Contribuez directement à améliorer l’éducation, la santé et
-                        les moyens de subsistance.</li>
-                    <li><strong>Acquérir de l’expérience :</strong> Développez des compétences en travail humanitaire,
-                        travail d’équipe et collaboration interculturelle.</li>
-                    <li><strong>Connexion communautaire :</strong> Travaillez aux côtés de personnes et de communautés
-                        inspirantes.</li>
-                    <li><strong>Flexibilité :</strong> Des opportunités allant de projets à court terme à des rôles
-                        continus, en personne ou à distance.</li>
+                    <li><strong>Impacter des vies :</strong> Contribuez directement à améliorer l’éducation, la santé et les moyens de subsistance.</li>
+                    <li><strong>Acquérir de l’expérience :</strong> Développez des compétences en travail humanitaire, travail d’équipe et collaboration interculturelle.</li>
+                    <li><strong>Connexion communautaire :</strong> Travaillez aux côtés de personnes et de communautés inspirantes.</li>
+                    <li><strong>Flexibilité :</strong> Des opportunités allant de projets à court terme à des rôles continus, en personne ou à distance.</li>
                 </ul>
             </section>
 
@@ -75,24 +67,21 @@
                 <h2>Opportunités actuelles</h2>
                 <div class="opportunity">
                     <h3>Éducateur communautaire</h3>
-                    <p><strong>Lieu :</strong> Goma, RDC (en personne)</p>
-                    <p><strong>Description :</strong> Enseignez l’alphabétisation de base et des compétences aux enfants
-                        et adultes dans les communautés déplacées.</p>
-                    <p><strong>Engagement de temps :</strong> 3 à 6 mois, 10 à 15 heures/semaine</p>
+                    <p><strong>Lieu :</strong> Goma, RDC (en personne).</p>
+                    <p><strong>Description :</strong> Enseignez l’alphabétisation de base et des compétences aux enfants et adultes dans les communautés déplacées.</p>
+                    <p><strong>Engagement de temps :</strong> 3 à 6 mois, 10 à 15 heures par semaine.</p>
                 </div>
                 <div class="opportunity">
                     <h3>Soutien à la collecte de fonds</h3>
-                    <p><strong>Lieu :</strong> À distance</p>
-                    <p><strong>Description :</strong> Aidez avec les campagnes en ligne, la sensibilisation des
-                        donateurs et la planification d’événements.</p>
-                    <p><strong>Engagement de temps :</strong> Flexible, 5 à 10 heures/semaine</p>
+                    <p><strong>Lieu :</strong> À distance.</p>
+                    <p><strong>Description :</strong> Aidez avec les campagnes en ligne, la sensibilisation des donateurs et la planification d’événements.</p>
+                    <p><strong>Engagement de temps :</strong> Flexible, 5 à 10 heures par semaine.</p>
                 </div>
                 <div class="opportunity">
                     <h3>Coordinateur logistique</h3>
-                    <p><strong>Lieu :</strong> Goma, RDC (en personne)</p>
-                    <p><strong>Description :</strong> Aidez à distribuer les fournitures d’aide et à gérer les
-                        opérations locales.</p>
-                    <p><strong>Engagement de temps :</strong> 1 à 3 mois, 20 heures/semaine</p>
+                    <p><strong>Lieu :</strong> Goma, RDC (en personne).</p>
+                    <p><strong>Description :</strong> Aidez à distribuer les fournitures d’aide et à gérer les opérations locales.</p>
+                    <p><strong>Engagement de temps :</strong> 1 à 3 mois, 20 heures par semaine.</p>
                 </div>
                 <p><em>Les opportunités peuvent changer. Contactez-nous pour les dernières ouvertures.</em></p>
             </section>
@@ -102,15 +91,10 @@
                 <h2>Comment postuler</h2>
                 <p>Prêt à commencer ? Suivez ces étapes :</p>
                 <ol class="apply-steps">
-                    <li><strong>Examinez les opportunités :</strong> Consultez les rôles ci-dessus ou contactez-nous
-                        pour plus d’options.</li>
-                    <li><strong>Soumettez votre intérêt :</strong> Remplissez le formulaire ci-dessous ou envoyez-nous
-                        un email à <a href="mailto:volunteer@wokovuway.org">volunteer@wokovuway.org</a> avec votre nom,
-                        vos compétences et votre disponibilité.</li>
-                    <li><strong>Entretien :</strong> Nous vous contacterons pour discuter de votre adéquation et des
-                        prochaines étapes.</li>
-                    <li><strong>Commencez :</strong> Après l’intégration, vous rejoindrez notre équipe de bénévoles !
-                    </li>
+                    <li><strong>Examinez les opportunités :</strong> Consultez les rôles ci-dessus ou contactez-nous pour plus d’options.</li>
+                    <li><strong>Soumettez votre intérêt :</strong> Remplissez le formulaire ci-dessous ou envoyez-nous un email à <a href="mailto:volunteer@wokovuway.org">volunteer@wokovuway.org</a> avec votre nom, vos compétences et votre disponibilité.</li>
+                    <li><strong>Entretien :</strong> Nous vous contacterons pour discuter de votre adéquation et des prochaines étapes.</li>
+                    <li><strong>Commencez :</strong> Après l’intégration, vous rejoindrez notre équipe de bénévoles !</li>
                 </ol>
                 <form id="volunteer-form" action="#" method="POST">
                     <div class="form-group">
@@ -122,28 +106,25 @@
                         <input type="email" id="email" name="email" placeholder="Votre email" required>
                     </div>
                     <div class="form-group">
-                        <label for="skills">Compétences/Expérience :</label>
-                        <textarea id="skills" name="skills" placeholder="Parlez-nous de vos compétences" rows="4"
-                            required></textarea>
+                        <label for="skills">Compétences/expérience :</label>
+                        <textarea id="skills" name="skills" placeholder="Parlez-nous de vos compétences" rows="4" required></textarea>
                     </div>
                     <div class="form-group">
                         <label for="availability">Disponibilité :</label>
-                        <input type="text" id="availability" name="availability"
-                            placeholder="Ex. : 10 heures/semaine pendant 3 mois" required>
+                        <input type="text" id="availability" name="availability" placeholder="Ex. : 10 heures/semaine pendant 3 mois" required>
                     </div>
                     <button type="submit" class="submit-btn">Postuler maintenant</button>
                 </form>
-                <p class="form-note">En postulant, vous acceptez notre <a href="privacy.html">Politique de
-                        confidentialité</a> et nos <a href="conditions.html">Conditions d’utilisation</a>.</p>
+                <p class="form-note">En postulant, vous acceptez notre <a href="privacy.html">politique de confidentialité</a> et nos <a href="conditions.html">conditions d’utilisation</a>.</p>
             </section>
 
             <!-- Contactez-nous -->
             <section class="volunteer-section">
                 <h2>Questions ?</h2>
                 <p>Si vous souhaitez plus d’informations sur le bénévolat, contactez-nous :</p>
-                <p><strong>Email :</strong> <a href="mailto:volunteer@wokovuway.org">volunteer@wokovuway.org</a></p>
-                <p><strong>Téléphone :</strong> +243 123 456 789</p>
-                <p><strong>Adresse :</strong> Ndosho, Avenue Rulenga, N°003, Goma, RDC</p>
+                <p><strong>Email :</strong> <a href="mailto:volunteer@wokovuway.org">volunteer@wokovuway.org</a>.</p>
+                <p><strong>Téléphone :</strong> +243 123 456 789.</p>
+                <p><strong>Adresse :</strong> Ndosho, Avenue Rulenga, N°003, Goma, RDC.</p>
             </section>
         </div>
 
@@ -158,11 +139,10 @@
                     </div>
                     <div class="footer-column">
                         <h4>Contact</h4>
-                        <p><strong>Adresse :</strong> Ndosho, Avenue Rulenga, N°003</p>
-                        <p class="italic"><strong>Téléphone :</strong><span class="phone"> +243 123 456 789</span></p>
-                        <p class="italic"><strong>Bureau :</strong> <span class="phone">+243 123 456 789</span></p>
-                        <a
-                            href="mailto:info@wokovuway.org?subject=Demande&body=Bonjour, j’ai une question à propos de...">
+                        <p><strong>Adresse :</strong> Ndosho, Avenue Rulenga, N°003.</p>
+                        <p class="italic"><strong>Téléphone :</strong> <span class="phone">+243 123 456 789</span>.</p>
+                        <p class="italic"><strong>Bureau :</strong> <span class="phone">+243 123 456 789</span>.</p>
+                        <a href="mailto:info@wokovuway.org?subject=Demande&body=Bonjour, j’ai une question à propos de...">
                             <span class="email">info@wokovuway.org</span>
                         </a>
                     </div>
@@ -180,47 +160,40 @@
                         <br>
                         <br>
                         <ul>
-                            <li><a href="terms.html">Terms and Conditions</a></li>
-                            <li><a href="accessibility.html">Accessibility Statement</a></li>
-                            <a href="faq.html" target="_blank">FAQ</a>
+                            <li><a href="terms.html">Termes et conditions</a></li>
+                            <li><a href="accessibility.html">Déclaration d’accessibilité</a></li>
+                            <li><a href="faq.html" target="_blank">FAQ</a></li>
                             <ul>
                                 <li><a href="newsletter_fr.html" target="_blank">Newsletter</a></li>
                             </ul>
-
-                            <li><a href="volunteer.html">Volunteer</a></li>
+                            <li><a href="volunteer.html">Bénévolat</a></li>
                         </ul>
                     </div>
                     <div class="footer-column">
                         <h4>Suivez-nous</h4>
                         <div class="social-icons">
                             <a href="https://x.com/wokovuwayngo?s=21" target="_blank"><i class="fab fa-twitter"></i></a>
-                            <a href="https://www.facebook.com/wokovuway/" target="_blank"><i
-                                    class="fab fa-facebook"></i></a>
-                            <a href="https://www.instagram.com/wokovuway" target="_blank"><i
-                                    class="fab fa-instagram"></i></a>
+                            <a href="https://www.facebook.com/wokovuway/" target="_blank"><i class="fab fa-facebook"></i></a>
+                            <a href="https://www.instagram.com/wokovuway" target="_blank"><i class="fab fa-instagram"></i></a>
                         </div>
                     </div>
                     <div class="partners">
                         <h4>Nos partenaires</h4>
-                        <a href="https://menengage.org/" target="_blank"><img src="images/men_en.png"
-                                alt="Partner 1"></a>
-                        <a href="https://cd.usembassy.gov/kinshasa/" target="_blank"><img src="images/uskin.jpg"
-                                alt="Partner 2"></a>
-                        <a href="https://www.medecinssansfrontieres.ca/" target="_blank"><img src="images/med.webp"
-                                alt="Partner 3"></a>
-                        <a href="https://www.unfpa.org/" target="_blank"><img src="images/unfpa.png"
-                                alt="Partner 4"></a>
+                        <a href="https://menengage.org/" target="_blank"><img src="images/men_en.png" alt="Partenaire 1"></a>
+                        <a href="https://cd.usembassy.gov/kinshasa/" target="_blank"><img src="images/uskin.jpg" alt="Partenaire 2"></a>
+                        <a href="https://www.medecinssansfrontieres.ca/" target="_blank"><img src="images/med.webp" alt="Partenaire 3"></a>
+                        <a href="https://www.unfpa.org/" target="_blank"><img src="images/unfpa.png" alt="Partenaire 4"></a>
                     </div>
                 </div>
             </div>
             <div class="footer-bottom">
                 <p>© 2025 Wokovu Way. Tous droits réservés.</p>
-                <p> Conçu et développé par <a href="https://www.goshenwebx.com/" target="_blank">Goshen WebX</a></p>
+                <p>Conçu et développé par <a href="https://www.goshenwebx.com/" target="_blank">Goshen WebX</a>.</p>
             </div>
         </footer>
     </div>
 
-    <script src="js/bénévole.js"></script>
+    <script src="js/volunteer.js"></script>
 </body>
 
 </html>
