--- a/index.html
+++ b/index.html
@@ -74,7 +74,10 @@
             <div class="features-container">
                 <div class="feature-item">
                     <i class="fas fa-hands-helping"></i>
-                    <h3>Become a Volunteer</h3>
+                    <a href="volunteer.html">
+                        <h3>Become a Volunteer</h3>
+                      </a>
+                      
                     <p>Join our team to make a difference.</p>
                 </div>
                 <div class="feature-item">
@@ -84,7 +87,10 @@
                 </div>
                 <div class="feature-item">
                     <i class="fas fa-wallet"></i>
-                    <h3>Donation</h3>
+                    <a href="donate.html">
+                        <h3>Donation</h3>
+                      </a>
+                      
                     <p>Your support creates impact.</p>
                 </div>
             </div>
