--- a/success.html
+++ b/success.html
@@ -61,10 +61,13 @@
             </div>
             <div class="row catalog-items">
                 <div class="catalog-item">
-                    <div class="thumbnail">
-                        <img src="images/new_tents.JPG" alt="Shielding Communities">
-                        <i class="fas fa-play overlay-icon"></i>
-                    </div>
+                    <a href="update_1.html">
+                        <div class="thumbnail">
+                            <img src="images/p.shielding.jpg" alt="Shielding Communities">
+                            <i class="fas fa-play overlay-icon"></i>
+                        </div>
+                    </a>
+                    
                     <div class="description">
                         <h3>Shielding Communities</h3>
                         <p>Over 3,000 lives impacted: Delivering tarpaulins to vulnerable communities, providing
@@ -106,7 +109,7 @@
                 </div>
                 <div class="catalog-item">
                     <div class="thumbnail">
-                        <img src="images/c636205b-b5bc-4a1e-ab2e-7af64955450c.JPG" alt="Safe Spaces">
+                        <img src="images/PXL_camp.jpg" alt="Safe Spaces">
                         <i class="fas fa-play overlay-icon"></i>
                     </div>
                     <div class="description">
