--- a/donate_french.html
+++ b/donate_french.html
@@ -161,11 +161,13 @@
                     <div class="footer-column">
                         <h4>Liens rapides</h4>
                         <ul>
-                            <li><a href="index_french.html">Accueil</a></li>
-                            <li><a href="about_french.html">À propos de nous</a></li>
-                            <li><a href="service_fr.html">Services</a></li>
-                            <li><a href="contact_french.html">Contact</a></li>
-                            <li><a href="privacy_fr.html">Confidentialité et politique</a></li>
+                            <li><a href="terms_french.html">Termes et conditions</a></li>
+                            <li><a href="accessibility_french.html">Déclaration d’accessibilité</a></li>
+                            <li><a href="faq_fr.html" target="_blank">FAQ</a></li>
+                            <ul>
+                                <li><a href="newsletter_fr.html" target="_blank">Newsletter</a></li>
+                            </ul>
+                            <li><a href="volunteer_fr.html">Bénévolat</a></li>
                         </ul>
                     </div>
                     <div class="footer-column">
