--- a/index_french.html
+++ b/index_french.html
@@ -70,7 +70,10 @@
             <div class="features-container">
                 <div class="feature-item">
                     <i class="fas fa-hands-helping"></i>
-                    <h3>Devenir bénévole</h3>
+                    <a href="volunteer_fr.html">
+                        <h3>Devenir bénévole</h3>
+                      </a>
+                      
                     <p>Rejoignez notre équipe pour faire une différence.</p>
                 </div>
                 <div class="feature-item">
@@ -80,7 +83,9 @@
                 </div>
                 <div class="feature-item">
                     <i class="fas fa-wallet"></i>
-                    <h3>Don</h3>
+                    <a href="donate_french.html">
+                        <h3>Don</h3>
+                      </a>
                     <p>Votre soutien crée un impact.</p>
                 </div>
             </div>
@@ -166,13 +171,13 @@
                         <br>
                         <br>
                         <ul>
-                            <li><a href="terms.html">Termes et conditions</a></li>
-                            <li><a href="accessibility.html">Déclaration d’accessibilité</a></li>
+                            <li><a href="terms_french.html">Termes et conditions</a></li>
+                            <li><a href="accessibility_french.html">Déclaration d’accessibilité</a></li>
                             <li><a href="faq_fr.html" target="_blank">FAQ</a></li>
                             <ul>
                                 <li><a href="newsletter_fr.html" target="_blank">Newsletter</a></li>
                             </ul>
-                            <li><a href="volunteer.html">Bénévolat</a></li>
+                            <li><a href="volunteer_fr.html">Bénévolat</a></li>
                         </ul>
                     </div>
                     <div class="footer-column">
