--- a/privacy_fr.html
+++ b/privacy_fr.html
@@ -153,13 +153,13 @@
                         <br>
                         <br>
                         <ul>
-                            <li><a href="terms.html">Termes et conditions</a></li>
-                            <li><a href="accessibility.html">Déclaration d’accessibilité</a></li>
+                            <li><a href="terms_french.html">Termes et conditions</a></li>
+                            <li><a href="accessibility_french.html">Déclaration d’accessibilité</a></li>
                             <li><a href="faq_fr.html" target="_blank">FAQ</a></li>
                             <ul>
-                                <li><a href="newsletter.html" target="_blank">Newsletter</a></li>
+                                <li><a href="newsletter_fr.html" target="_blank">Newsletter</a></li>
                             </ul>
-                            <li><a href="volunteer.html">Bénévolat</a></li>
+                            <li><a href="volunteer_fr.html">Bénévolat</a></li>
                         </ul>
                     </div>
                     <div class="footer-column">
