--- a/success_french.html
+++ b/success_french.html
@@ -2,14 +2,16 @@
 <html lang="fr">
 
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Services - Wokovuway Org.</title>
-    <meta name="description" content="Découvrez les services humanitaires offerts par l'Organisation Wokovuway au Congo et au-delà.">
-    <meta name="keywords" content="Wokovuway, services, humanitaire, Congo, charité, éducation, aide">
+    <title>Wokovuway Org.</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Organisation Humanitaire Wokovuway">
+    <meta name="keywords" content="Wokovuway, humanitaire, Congo, éducation, charité, responsive">
     <meta name="author" content="Wokovuway">
-    <link rel="stylesheet" href="css/service.css">
+
+    <link rel="stylesheet" href="css/sucess.css">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
@@ -18,8 +20,8 @@
         <!-- En-tête & Navigation -->
         <header id="wokovuway-header" class="sticky-header">
             <div class="nav-container">
-                <a href="index_french.html" class="logo">
-                    <img src="images/logos1.png" alt="Logo Wokovuway" class="logo-img">
+                <a href="index.html" class="logo">
+                    <img src="images/logos1.png" alt="Wokovuway Logo" class="logo-img">
                     <span class="logo-text">Wokovuway Org</span>
                 </a>
                 <div class="hamburger"><i class="fas fa-bars"></i></div>
@@ -41,77 +43,89 @@
             </div>
         </header>
 
-        <div class="container">
-            <!-- Titre de la page -->
-            <h1 class="page-title">Nos services</h1>
 
-            <!-- Introduction -->
-            <section class="services-section">
-                <h2>Renforcer les communautés</h2>
-                <p>À l'Organisation Wokovuway, nous offrons une gamme de services humanitaires visant à améliorer la vie des populations vulnérables en République Démocratique du Congo et au-delà. Nos programmes sont conçus pour répondre aux besoins immédiats tout en favorisant une résilience et une croissance à long terme. Dernière mise à jour : 13 mars 2025.</p>
-            </section>
-
-            <!-- Aide humanitaire -->
-            <section class="services-section">
-                <h2>Aide humanitaire</h2>
-                <div class="service-item">
-                    <h3>Secours d’urgence</h3>
-                    <p>Nous fournissons des fournitures essentielles telles que de la nourriture, de l’eau, des abris et des soins médicaux aux communautés touchées par les conflits, les déplacements ou les catastrophes naturelles.</p>
-                </div>
-                <div class="service-item">
-                    <h3>Services de santé</h3>
-                    <p>Nos cliniques mobiles et programmes de sensibilisation à la santé offrent des soins médicaux essentiels, des vaccins et un soutien à la santé maternelle dans les zones mal desservies.</p>
-                </div>
-            </section>
-
-            <!-- Éducation et formation -->
-            <section class="services-section">
-                <h2>Éducation et formation</h2>
-                <div class="service-item">
-                    <h3>Programmes d’alphabétisation</h3>
-                    <p>Nous proposons une éducation de base aux enfants et aux adultes, les aidant à acquérir des compétences en lecture et en calcul pour améliorer leurs opportunités.</p>
-                </div>
-                <div class="service-item">
-                    <h3>Formation professionnelle</h3>
-                    <p>Grâce à des ateliers et des cours de développement de compétences, nous dotons les individus de métiers tels que la couture, la menuiserie et l’agriculture pour atteindre l’autosuffisance.</p>
-                </div>
-            </section>
-
-            <!-- Autonomisation communautaire -->
-            <section class="services-section">
-                <h2>Autonomisation communautaire</h2>
-                <div class="service-item">
-                    <h3>Autonomisation des femmes</h3>
-                    <p>Nous soutenons les femmes avec des ressources, des formations et des opportunités de microfinance pour démarrer de petites entreprises et diriger leurs communautés.</p>
-                </div>
-                <div class="service-item">
-                    <h3>Développement des jeunes</h3>
-                    <p>Nos programmes engagent les jeunes à travers le mentorat, la formation au leadership et des activités récréatives pour construire un avenir meilleur.</p>
-                </div>
-            </section>
-
-            <!-- Impliquez-vous -->
-            <section class="services-section">
-                <h2>Impliquez-vous</h2>
-                <p>Voulez-vous soutenir nos services ? Vous pouvez faire une différence en :</p>
-                <ul class="involvement-list">
-                    <li><a href="donate_fr.html">Faisant un don</a> pour financer nos programmes.</li>
-                    <li><a href="volunteer_fr.html">Devenant bénévole</a> avec votre temps et vos compétences.</li>
-                    <li><a href="contact_fr.html">Nous contactant</a> pour en savoir plus sur les opportunités de partenariat.</li>
-                </ul>
-            </section>
-
-            <!-- Contactez-nous -->
-            <section class="services-section">
-                <h2>Contactez-nous</h2>
-                <p>Pour plus d’informations sur nos services, contactez-nous :</p>
-                <p><strong>Email :</strong> <a href="mailto:info@wokovuway.org">info@wokovuway.org</a>.</p>
-                <p><strong>Téléphone :</strong> +243 123 456 789.</p>
-                <p><strong>Adresse :</strong> Ndosho, Avenue Rulenga, N°003, Goma, RDC.</p>
-            </section>
+        <div id="tm-video-container">
+            <video autoplay muted loop id="tm-video">
+                <source src="video/Camp_displace_fam.mp4" type="video/mp4">
+                Votre navigateur ne supporte pas la balise vidéo.
+            </video>
+            <i id="tm-video-control-button" class="fas fa-pause"></i>
         </div>
 
-        <!-- Pied de page -->
+        <section class="success-stories container">
+            <div class="row text-center">
+                <h1>Nos Réalisations</h1>
+                <div class="welcome-text">
+                    <p>Ensemble, nous faisons une différence dans la vie de nombreux individus.</p>
+                    <p>Nous devons notre succès à vous.</p>
+                </div>
+            </div>
+            <div class="row catalog-items">
+                <div class="catalog-item">
+                    <a href="update_1_french.html">
+                        <div class="thumbnail">
+                            <img src="images/p.shielding.jpg" alt="Shielding Communities">
+                            <i class="fas fa-play overlay-icon"></i>
+                        </div>
+                    </a>
+                    <div class="description">
+                        <h3>protéger les communautés </h3>
+                        <p>Plus de 3 000 vies impactées : Fourniture de bâches aux communautés vulnérables, offrant abri, protection et sécurité en temps de crise.</p>
+                    </div>
+                </div>
+                <div class="catalog-item">
+                    <div class="thumbnail">
+                        <img src="images/health1.png" alt="Soins de Santé">
+                        <i class="fas fa-play overlay-icon"></i>
+                    </div>
+                    <div class="description">
+                        <h3>Soins de Santé</h3>
+                        <p>Amélioration du bien-être grâce à des médicaments essentiels, à l’éducation à l’assainissement et à des initiatives de santé pour les femmes et les enfants.</p>
+                    </div>
+                </div>
+                <div class="catalog-item">
+                    <div class="thumbnail">
+                        <img src="images/school.jpg" alt="Gestion de l'Hygiène Menstruelle">
+                        <i class="fas fa-play overlay-icon"></i>
+                    </div>
+                    <div class="description">
+                        <h3>Gestion de l'Hygiène Menstruelle</h3>
+                        <p>Fourniture de produits sanitaires, d’éducation et d’installations d’assainissement pour garantir l’hygiène et la santé reproductive des filles et des femmes.</p>
+                    </div>
+                </div>
+                <div class="catalog-item">
+                    <div class="thumbnail">
+                        <img src="images/women_emp.jpg" alt="Autonomisation des Femmes">
+                        <i class="fas fa-play overlay-icon"></i>
+                    </div>
+                    <div class="description">
+                        <h3>Autonomisation des Femmes</h3>
+                        <p>Promotion de traits de masculinité positive comme la confiance et le leadership pour briser les stéréotypes de genre et favoriser l’égalité.</p>
+                    </div>
+                </div>
+                <div class="catalog-item">
+                    <div class="thumbnail">
+                        <img src="images/PXL_20240628_104704933 (1).jpg" alt="Espaces Sûrs">
+                        <i class="fas fa-play overlay-icon"></i>
+                    </div>
+                    <div class="description">
+                        <h3>Espaces Sûrs & Sécurité</h3>
+                        <p>Création d’environnements sécurisés avec accès à des commodités essentielles, favorisant la confiance, la dignité et les opportunités.</p>
+                    </div>
+                </div>
+                <div class="catalog-item">
+                    <div class="thumbnail">
+                        <img src="images/mobile-kitch.jpg" alt="Sensibilisation Impactante">
+                        <i class="fas fa-play overlay-icon"></i>
+                    </div>
+                    <div class="description">
+                        <h3>Sensibilisation Impactante</h3>
+                        <p>Faire une différence grâce au soutien éducatif et à l’assistance caritative dans les communautés.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <footer>
             <div class="container">
                 <div class="footer-row">
@@ -143,13 +157,13 @@
                         <br>
                         <br>
                         <ul>
-                            <li><a href="terms.html">Termes et conditions</a></li>
-                            <li><a href="accessibility.html">Déclaration d’accessibilité</a></li>
+                            <li><a href="terms_french.html">Termes et conditions</a></li>
+                            <li><a href="accessibility_french.html">Déclaration d’accessibilité</a></li>
                             <li><a href="faq_fr.html" target="_blank">FAQ</a></li>
                             <ul>
                                 <li><a href="newsletter_fr.html" target="_blank">Newsletter</a></li>
                             </ul>
-                            <li><a href="volunteer.html">Bénévolat</a></li>
+                            <li><a href="volunteer_fr.html">Bénévolat</a></li>
                         </ul>
                     </div>
                     <div class="footer-column">
@@ -174,9 +188,7 @@
                 <p>Conçu et développé par <a href="https://www.goshenwebx.com/" target="_blank">Goshen WebX</a>.</p>
             </div>
         </footer>
-    </div>
-
-    <script src="js/services.js"></script>
+        <script src="js/success.js"></script>
 </body>
 
 </html>
