--- a/terms_french.html
+++ b/terms_french.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Conditions d'utilisation - Wokovuway Org.</title>
-    <meta name="description" content="Conditions d'utilisation de l'Organisation Wokovuway.">
+    <meta name="description" content="Conditions d'utilisation de l'Organisation Wokovuway">
     <meta name="keywords" content="Wokovuway, conditions d'utilisation, humanitaire, Congo, charité">
     <meta name="author" content="Wokovuway">
     <link rel="stylesheet" href="css/terms.css">
@@ -32,7 +32,7 @@
                         <li><a href="donate_french.html">Faire un don</a></li>
                         <li><a href="contact_french.html">Contact</a></li>
                         <li class="lang-toggle">
-                            <a href="terms.html" title="Passer à l'anglais">
+                            <a href="team.html" title="Passer à l'anglais">
                                 <i class="fas fa-globe"></i> EN
                             </a>
                         </li>
@@ -156,13 +156,13 @@
                         <br>
                         <br>
                         <ul>
-                            <li><a href="terms.html">Termes et conditions</a></li>
-                            <li><a href="accessibility.html">Déclaration d’accessibilité</a></li>
+                            <li><a href="terms_french.html">Termes et conditions</a></li>
+                            <li><a href="accessibility_french.html">Déclaration d’accessibilité</a></li>
                             <li><a href="faq_fr.html" target="_blank">FAQ</a></li>
                             <ul>
                                 <li><a href="newsletter_fr.html" target="_blank">Newsletter</a></li>
                             </ul>
-                            <li><a href="volunteer.html">Bénévolat</a></li>
+                            <li><a href="volunteer_fr.html">Bénévolat</a></li>
                         </ul>
                     </div>
                     <div class="footer-column">
